--- a/src/asciimon.tex
+++ b/src/asciimon.tex
@@ -1,14 +1,10 @@
-\documentclass[12pt, a4paper, footexclude, headexclude]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[margin=0.5in]{geometry}
+\usepackage[margin=0.5in, bottom=0.1in]{geometry}
 
-% \usepackage[utf8x]{inputenc}
-% \usepackage[T1]{fontenc}
-% \usepackage[ngerman]{babel}
-% \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
 \usepackage{multicol}
 \usepackage{booktabs}
@@ -25,14 +21,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Obacht: It is discuraged to use a field with size bigger than 15x15 since the pdf might get
-% to slow to play
-\def\fieldWidth{30}
-\def\fieldHeight{15}
+% These should not be changed
+\def\boardCharsW{30}
+\def\boardCharsH{15}
 \def\atkAnimCells{20}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{insDLJS}[]{JSDateiname}{asciimon}
 
@@ -43,17 +38,17 @@ one of them has no health left. If the enemy is beaten a new creature is selecte
 If your own creature dies you lose, unless you previously caught another one.";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+const BOARD_CHARS_W = AFMakeNumber(\boardCharsW);
+const BOARD_CHARS_H = AFMakeNumber(\boardCharsH);
 const ATK_ANIM_CELLS = AFMakeNumber(\atkAnimCells);
-const SCREEN_TEXT_WIDTH = 400;
+const SCREEN_TEXT_SIZE = 400;
 const ROUND_ANIMATION_SPEED = 100;
 const CHANGE_ANIMATION_SPEED = 50;
 
 %%%%%%%%%%%%%%%%%%
 % Game constants %
 %%%%%%%%%%%%%%%%%%
-% Gui states
+% GUI states
 const MENU = 0;
 const FIGHT = 1;
 const CHANGE = 2;
@@ -67,22 +62,21 @@ const ITEM_SELECT = 7;
 const ACTION_IDLE = -1
 const ACTION_P_CHOOSE = 0;
 const ACTION_P_ATTACK = 1;
-const ACTION_E_HP_UPDATE = 3;
-const ACTION_E_CHOOSE = 4;
-const ACTION_E_ATTACK = 5;
-const ACTION_P_HP_UPDATE = 6;
-const ACTION_P_CHANGE = 7;
-const ACTION_END = 8;
+const ACTION_E_HP_UPDATE = 2;
+const ACTION_E_CHOOSE = 3;
+const ACTION_E_ATTACK = 4;
+const ACTION_P_HP_UPDATE = 5;
+const ACTION_END = 6;
 
 % Turns
 const PLAYER = 0;
 const ENEMY = 1;
 
 % Animation
-const CENTER_M = FIELD_HEIGHT * 0.5;
+const CENTER_M = BOARD_CHARS_H * 0.5;
 const PADDING_SYMB = " ";
 % https://stackoverflow.com/questions/16885297/
-const EMPTY_LINE = Array(FIELD_WIDTH + 2).join(PADDING_SYMB);
+const EMPTY_LINE = Array(BOARD_CHARS_W + 2).join(PADDING_SYMB);
 
 % Particle duration and state indicator
 const ATK_DURATION = 15;
@@ -121,7 +115,7 @@ var enemyBeaten = false;
 % Interval for saving the creature change visualization
 var changeAnimationInterval;
 % Current state of the animation
-var animationProgress = FIELD_WIDTH;
+var animationProgress = BOARD_CHARS_W;
 % Indicate whether the canvas are currently drawing a creature
 var drawing = true;
 % The interval for processing a round (uses the turnState to terminate)
@@ -182,7 +176,7 @@ const T_FLUFF = 5;
 const T_FIRE = 6;
 const T_STANDARD = 7;
 
-% For showing the creature type in the gui
+% For showing the creature type in the GUI
 const TYPE_STRINGS = new Array(
     "Water", "Air", "Stone", "Grass", "Ghost", "Fluff", "Fire"
 );
@@ -770,9 +764,7 @@ const ATTACK_LIST = new Array(
 );
 
 % Item access constants
-% NAME = 0
 const DESC = 1;
-% const COUNT = 1; % TODO
 
 % Array of all available items
 const ITEM_LIST = new Array(
@@ -791,32 +783,32 @@ const EXP_TABLE = [];
 % Helper %
 %%%%%%%%%%
 /**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
+ * Returns a random number between 0 and the parameter.
+ * @param {Number} max The upper bound
  */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Initialisation and Restart %
+% Initialization and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 /**
- * Initialise the default game state.
+ * Initialize the default game state.
  */
-function initialise() {
-    % Init the GUI
-    initialiseButtons();
+function initialize() {
+    % Initialize the GUI
+    initializeButtons();
     updateButtontxt();
 
-    % Init exp table
+    % Initialize exp table
     for (var i = 0; i < MAX_LVL + 1; i++) {
         % original formula 250 * i * (i + 1)
         EXP_TABLE.push((START_EXP + 65 * (i - 5)) * (i - 5 + 1));
     }
     EXP_TABLE.push(Infinity);
 
-    % Initialise the player and enemy creature
+    % Initialize the player and enemy creature
     % Player items are already initialized to empty
     curCreatureIdx = 0;
     curPlayerCreatures[curCreatureIdx] = getCreature(MIN_LVL);
@@ -836,14 +828,14 @@ function initialise() {
 }
 
 /**
- * Initialise all buttons from the GUI.
+ * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct font and text size.
  */
-function initialiseButtons() {
+function initializeButtons() {
     % Disables the rectangle around a button after the click
     app.focusRect = false;
 
-    % Assign each button the coresponding function
+    % Assign each button the corresponding function
     this.getField("restart").setAction("MouseUp", "restart();");
 
     % Hide the damage table
@@ -864,30 +856,25 @@ function initialiseButtons() {
 
     % Adjust text size and font
     var cell;
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
+    for (var m = 0; m < BOARD_CHARS_H; m++) {
         cell = this.getField("player" + m);
-        cell.textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+        cell.textSize = SCREEN_TEXT_SIZE / BOARD_CHARS_W;
         cell.textFont = font.Cour;
 
         cell = this.getField("enemy" + m);
-        cell.textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+        cell.textSize = SCREEN_TEXT_SIZE / BOARD_CHARS_W;
         cell.textFont = font.Cour;
     }
-
-    % Info field setup
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
 
     % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
-    this.getField("tooltipbtn").highlight="none";
 
-    printInfoText("Initialised the game. Beat the current enemy creature.");
+    printInfoText("Initialized the game. Beat the current enemy creature.");
 }
 
 /**
- * Restart the game and clear everything
+ * Restart the game and clear everything.
  */
 function restart() {
     % Restart only if no animation is running
@@ -903,7 +890,7 @@ function restart() {
     gameover = false;
     guiState = MENU;
 
-    % Initialise the player and enemy creature
+    % Initialize the player and enemy creature
     for (var i = 0; i < curPlayerCreatures.length; i++) {
         curPlayerCreatures[i] = ["Empty"];
     }
@@ -911,7 +898,7 @@ function restart() {
     curPlayerCreatures[curCreatureIdx] = getCreature(MIN_LVL);
     curEnemy = getEnemy();
 
-    % Initialise the player items to empty
+    % Initialize the player items to empty
     for (var i = 0; i < curPlayerItems.length; i++) {
         curPlayerItems[i] = [0, 0];
     }
@@ -945,10 +932,11 @@ function tooltip(on) {
 
         field.multiline = true;
         field.textSize = 16;
-        field.fillColor = color.gray;
         % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
         field.rect = [128, 601, 468, 401];
+
+        this.getField("tooltiptxt").setFocus();
 
         field.delay = false;
     } else {
@@ -956,12 +944,6 @@ function tooltip(on) {
         var field = this.getField("tooltiptxt");
         field.delay = true;
         field.hidden = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
         field.delay = false;
     }
 }
@@ -977,14 +959,15 @@ function hint() {
         field.hidden = true;
         field.delay = false;
     } else {
-        % Move the tooltip field to the center of the screen
-        % and adjust the size so the text can be displayed
+        % Create an overlay
         var field = this.getField("hintbox");
         field.delay = true;
         field.hidden = false;
         % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
-        field.rect = [298, 155, 596, 0];
+        % Use the restart button rect to get the upper bound for this rect
+        var helper = this.getField("restart");
+        field.rect = [298, helper.rect[3], 595, 0];
         field.delay = false;
     }
 }
@@ -1015,7 +998,7 @@ function processInput(button) {
         return;
     }
 
-    % Nothing is currently processed, advance gui
+    % Nothing is currently processed, advance GUI
     if (turnState == ACTION_END) {
         % Do not allow the player to play without replacing dead creatures
         if (guiState != CHANGE && curPlayerCreatures[curCreatureIdx][NAME] == "Empty") {
@@ -1030,7 +1013,7 @@ function processInput(button) {
                 guiState = button;
             }
         }
-        % Process gui input that was not in the main menu
+        % Process GUI input that was not in the main menu
         else {
             % Save the guiState so it can be overridden if necessary
             var lastState = guiState;
@@ -1066,7 +1049,7 @@ function processInput(button) {
 
 /**
  * This function determines the program flow,
- * by processing the current state of the round and the taken gui action.
+ * by processing the current state of the round and the taken GUI action.
  * The usual order is:
  * 1. Player turn
  * 2. Enemy turn
@@ -1122,7 +1105,7 @@ function executeRound(action, idx) {
         } else if (action == CHANGE) {
             turnState = change(idx);
         } else if (action == ITEM_SELECT) {
-            % Items that need a selection via the gui
+            % Items that need a selection via the GUI
             turnState = itemSelect(idx);
         } else if (action == ITEMS) {
             % Items that are applied to the current player creature
@@ -1277,7 +1260,11 @@ function change(idx) {
 
     curCreatureIdx = idx - 1;
 
-    animatedString = "You switched from " + oldName + " to " + creature[NAME] + ".";
+    if (oldName == "Empty") {
+        animatedString = "You switched to " + creature[NAME] + ".";
+    } else {
+        animatedString = "You switched from " + oldName + " to " + creature[NAME] + ".";
+    }
     updatePlayerTxt();
     drawPlayer();
 
@@ -1332,7 +1319,7 @@ function run() {
  * Selects the chosen item from the backpack and applies its affect.
  * Processes items that are not targeted on creatures in the player list,
  * but rather on the enemy or the current player creature.
- * (The difference is to 'itemSelect' one gui step.)
+ * (The difference is to 'itemSelect' one GUI step.)
  * Processes:
  * Empty (ends current round),
  * Weaken (Triggers attack)
@@ -1364,7 +1351,7 @@ function itemApply(idx) {
 /**
  * Selects the chosen item from the backpack and applies its affect.
  * Processes items that are targeted on creatures in the player list.
- * (The difference to 'itemApply' is one gui step.)
+ * (The difference to 'itemApply' is one GUI step.)
  * Processes:
  * Capsule (ends current round),
  * Drink (Triggers attack)
@@ -1568,8 +1555,6 @@ function getCreature(curLvl) {
 
     var hp = Math.ceil(CREATURE_LIST[creature][HP_GAIN] * curLvl);
 
-    % TODO dont copy everything, have an id to the original list and
-    % extra attributes for the instance variables
     return [
         CREATURE_LIST[creature][NAME],
         CREATURE_LIST[creature][HP_GAIN],
@@ -1588,7 +1573,7 @@ function getCreature(curLvl) {
 % Information updates %
 %%%%%%%%%%%%%%%%%%%%%%%
 /**
- * Update the text of all four gui buttons depending on the
+ * Update the text of all four GUI buttons depending on the
  * current menu state.
  */
 function updateButtontxt() {
@@ -1632,7 +1617,7 @@ function updateButtontxt() {
 }
 
 /**
- * Updates the player information displayed by the gui.
+ * Updates the player information displayed by the GUI.
  */
 function updatePlayerTxt() {
     var creature = curPlayerCreatures[curCreatureIdx];
@@ -1645,7 +1630,6 @@ function updatePlayerTxt() {
 
     var resStr = "";
     for (var i = 0; i < MAX_HP_SYMBS * (creature[CUR_HP] / creature[MAX_HP]); i++) {
-        %resStr += "#";
         resStr += String.fromCharCode(0x2588);
     }
 
@@ -1653,7 +1637,7 @@ function updatePlayerTxt() {
 }
 
 /**
- * Updates the enemy information displayed by the gui.
+ * Updates the enemy information displayed by the GUI.
  */
 function updateEnemyTxt() {
     this.getField("enemyname").value =
@@ -1664,14 +1648,13 @@ function updateEnemyTxt() {
 
     var resStr = "";
     for (var i = 0; i < MAX_HP_SYMBS * (curEnemy[CUR_HP] / curEnemy[MAX_HP]); i++) {
-        %resStr += "#";
         resStr += String.fromCharCode(0x2588);
     }
     this.getField("enemystatus").value = resStr;
 }
 
 /**
- * Updates the health information displayed by the gui for player and enemy.
+ * Updates the health information displayed by the GUI for player and enemy.
  * This allows for animations of the health bar and the health text.
  * This function only increases or decreases the shown health points by one bar
  * calling it multiple times results in an animation.
@@ -1691,7 +1674,7 @@ function updateHpInfo() {
         % Calculate how much hp one bar symbolizes
         var hpPerBar = cs[i][MAX_HP] / MAX_HP_SYMBS;
         var p = ps[i];
-        % If the gui shows less hp than the creature has, increase the shown hp
+        % If the GUI shows less hp than the creature has, increase the shown hp
         if (guiHP[p] < cs[i][CUR_HP]) {
             % Prevent overstepping the max hp
             guiHP[p] += Math.min(cs[i][CUR_HP] - guiHP[p], Math.ceil(hpPerBar));
@@ -1704,7 +1687,7 @@ function updateHpInfo() {
             }
             res = false;
         }
-        % If the gui shows more hp than the creature has, decrease the shown hp
+        % If the GUI shows more hp than the creature has, decrease the shown hp
         else if (guiHP[p] > cs[i][CUR_HP]) {
             % Prevent undercutting 0 hp
             guiHP[p] -= Math.min(guiHP[p] - cs[i][CUR_HP], Math.ceil(hpPerBar));
@@ -1732,9 +1715,9 @@ function defaultParticleSys() {
         DEAD, [0, 0], % STATE, POS
         0, 0, % SYMB, ROTATION
         2, [0, 0],  % MASS, MOMENTUM
-        canvas.halfWidth / FIELD_HEIGHT, % WIDTH
-        canvas.halfHeight / FIELD_HEIGHT, % HEIGHT
-        (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 1.3 % SIZE
+        canvas.halfWidth / BOARD_CHARS_H, % WIDTH
+        canvas.halfHeight / BOARD_CHARS_H, % HEIGHT
+        (SCREEN_TEXT_SIZE / BOARD_CHARS_W) * 1.3 % SIZE
     ]);
 
     % Needed because the water changes the fill color
@@ -1746,7 +1729,7 @@ function defaultParticleSys() {
         iterationCur: 0,
         aliveParticles: 0,
         alignment: "center",
-        particleCount: FIELD_WIDTH,
+        particleCount: BOARD_CHARS_W,
         particleSymbols: ["X"],
         particleLifetime: ATK_DURATION - 1,
         particleMultiline: false,
@@ -1761,7 +1744,7 @@ function defaultParticleSys() {
             return true;
         },
         remove: function(p) {
-            hideParticleField(p);
+            hideParticle(p);
             particles[p][STATE] = DEAD;
             this.aliveParticles--;
         },
@@ -1778,12 +1761,12 @@ function defaultParticleSys() {
  */
 function setCanvasData() {
     const PLAYER_TOP_RECT = this.getField("player0").rect;
-    const PLAYER_BOT_RECT = this.getField("player" + (FIELD_HEIGHT - 1)).rect;
+    const PLAYER_BOT_RECT = this.getField("player" + (BOARD_CHARS_H - 1)).rect;
     const L_P = PLAYER_TOP_RECT[0];
     const B_P = PLAYER_BOT_RECT[3];
 
     const ENEMY_TOP_RECT = this.getField("enemy0").rect;
-    const ENEMY_BOT_RECT = this.getField("enemy" + (FIELD_HEIGHT - 1)).rect;
+    const ENEMY_BOT_RECT = this.getField("enemy" + (BOARD_CHARS_H - 1)).rect;
     const L_E = ENEMY_TOP_RECT[0];
     const B_E = ENEMY_BOT_RECT[3];
 
@@ -1805,7 +1788,7 @@ function setCanvasData() {
 }
 
 /**
- * Alters the position of the given particlce by using gravity.
+ * Alters the position of the given particle by using gravity.
  * The floor can be used to achieve a jumping motion.
  * Very similar the implementation found here:
  * https://gamedev.stackexchange.com/questions/10277/equation-for-bouncing-graph
@@ -1881,7 +1864,7 @@ function waterParticles(target) {
     particleSys.particleLifetime = (ATK_DURATION - 1) * 2;
     particleSys.particleSymbols = ["(", " )", "(", "(", "(", " )", " )", "(", " )", " )", ""];
     particleSys.particleBold = true;
-    particleSys.particleCount = FIELD_WIDTH / 2.0 + 1;
+    particleSys.particleCount = BOARD_CHARS_W / 2.0 + 1;
 
     % Prepare a particle as an white overlay to conceal the target creature
     var particle = this.getField("atkanim" + 0);
@@ -1904,7 +1887,7 @@ function waterParticles(target) {
 
         const w = particles[p][WIDTH];
         var xPos = canvas.l[target] + w + (p - 1) * w * 2.0;
-        % Init particle - rotation ...
+        % Initialize particle - rotation ...
         particles[p][STATE]++;
         particles[p][POS] = [xPos, 0];
         particles[p][SYMB] = p \% (particleSys.particleSymbols.length - 1);
@@ -1956,7 +1939,7 @@ function airParticles(target) {
     % Emit a particle that is part of a group containing 'memberCount' many particles
     particleSys.emit = function(p) {
         % Create a particle with same width as height
-        particles[p][WIDTH] = (canvas.halfWidth / FIELD_WIDTH) * 2.5;
+        particles[p][WIDTH] = (canvas.halfWidth / BOARD_CHARS_W) * 2.5;
 
         % Determine the leader to which the particle belongs
         const memberCount = 4;
@@ -1979,7 +1962,7 @@ function airParticles(target) {
                 return false;
             }
 
-            % Get random y pos
+            % Get random y position
             yPos = bot + particles[p][HEIGHT] +
                 getRandomInt((canvas.halfHeight - particles[p][HEIGHT]) * 2.0);
             pos = [left + particles[p][WIDTH], yPos];
@@ -1994,7 +1977,7 @@ function airParticles(target) {
             }
         }
 
-        % Init particle
+        % Initialize particle
         particles[p][STATE]++;
         particles[p][POS] = pos;
         particles[p][SYMB] = getRandomInt(particleSys.particleSymbols.length);
@@ -2023,7 +2006,7 @@ function airParticles(target) {
         } else {
             % Take the x position of the leader particle
             pos = [particles[p - 1][POS][X], particles[p][POS][Y]];
-            % If the leader is already outofbounds
+            % If the leader is already out of bounds
             if (pos[X] >= right - particles[p][WIDTH]) {
                 pos[X] -= 2.0 * particles[p][WIDTH];
                 % If the particle is near the leader, move to max
@@ -2064,9 +2047,9 @@ function stoneParticles(target) {
 
     particleSys.emit = function(p) {
         % Create a particle with same width as height
-        particles[p][WIDTH] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][HEIGHT] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 0.9;
+        particles[p][WIDTH] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][HEIGHT] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][SIZE] = (SCREEN_TEXT_SIZE / BOARD_CHARS_W) * 0.9;
 
         const s = (canvas.l[target] + particles[p][WIDTH]);
         const w = (canvas.halfWidth - particles[p][WIDTH]) * 2.0;
@@ -2138,7 +2121,7 @@ function grassParticles(target) {
         const offset = 70;
         const offsetY = -offset * 0.5 + getRandomInt(offset);
         particles[p][POS][Y] = canvas.c[(target + 1) \% 2][Y] + offsetY;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 0.9;
+        particles[p][SIZE] = (SCREEN_TEXT_SIZE / BOARD_CHARS_W) * 0.9;
         particles[p][ROTATION] = 90;
 
         particles[p][SYMB] = getRandomInt(particleSys.particleSymbols.length);
@@ -2200,14 +2183,14 @@ function fluffParticles(target) {
     particleSys.force = [0, 0];
 
     particleSys.emit = function(p) {
-        particles[p][WIDTH] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][HEIGHT] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) / 3.0;
+        particles[p][WIDTH] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][HEIGHT] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][SIZE] = (SCREEN_TEXT_SIZE / BOARD_CHARS_W) / 3.0;
         particles[p][POS] = canvas.c[(target + 1) \% 2];
 
         % Different physics since the canvas elements are not equal in height
         if (target == PLAYER) {
-            particles[p][MOMENTUM] = [-35, 15 * 4.0];
+            particles[p][MOMENTUM] = [-35, 15 * 3.5];
         } else {
             particles[p][MOMENTUM] = [40, 15 * 6.5];
         }
@@ -2237,7 +2220,7 @@ function fluffParticles(target) {
 }
 
 /**
- * Sets up a fire particle system, in which ascii-fire
+ * Sets up a fire particle system, in which ASCII-fire
  * is overlayed over the target canvas.
  * @param {Number} target The target-idx of the canvas.
  */
@@ -2321,9 +2304,9 @@ function standardParticles(target) {
     particleSys.particleCount = 1;
 
     particleSys.emit = function(p) {
-        particles[p][WIDTH] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][HEIGHT] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 2.0;
+        particles[p][WIDTH] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][HEIGHT] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][SIZE] = (SCREEN_TEXT_SIZE / BOARD_CHARS_W) * 2.0;
         particles[p][POS] = canvas.c[target];
 
         particles[p][STATE]++;
@@ -2370,9 +2353,9 @@ function processParticles() {
 
         particleSys.move(p);
         % Draw the particle rectangle
-        moveParticleField(p);
+        moveParticleRect(p);
         % Process particle content and appearance
-        showAndUpdateParticleField(p);
+        showAndUpdateParticle(p);
 
         particles[p][STATE]++;
     }
@@ -2385,7 +2368,7 @@ function processParticles() {
  * by using position, width and height.
  * @param {Number} p The particle index.
  */
-function moveParticleField(p) {
+function moveParticleRect(p) {
     var particle = this.getField("atkanim" + p);
 
     const x = particles[p][POS][X];
@@ -2402,7 +2385,7 @@ function moveParticleField(p) {
  * For example: multiline, textfont, textsize, rotation.
  * @param {Number} p The particle index.
  */
-function showAndUpdateParticleField(p) {
+function showAndUpdateParticle(p) {
     var particle = this.getField("atkanim" + p);
 
     particle.hidden = false;
@@ -2434,7 +2417,7 @@ function showAndUpdateParticleField(p) {
  * Hide the given particle.
  * @param {Number} p The particle index.
  */
-function hideParticleField(p) {
+function hideParticle(p) {
     var particle = this.getField("atkanim" + p);
     particle.hidden = true;
 }
@@ -2473,15 +2456,15 @@ function frameEnemy() {
 function frame(owners) {
     if (animationProgress < 0) {
         app.clearInterval(changeAnimationInterval);
-        animationProgress = FIELD_WIDTH;
+        animationProgress = BOARD_CHARS_W;
         drawing = false;
         return;
     }
 
     for (var idx = 0; idx < owners.length; idx++) {
         % Shift all lines
-        for (var m = 0; m < FIELD_HEIGHT; m++) {
-            shiftFieldLeft(owners[idx] + m);
+        for (var m = 0; m < BOARD_CHARS_H; m++) {
+            shiftCanvasLeft(owners[idx] + m);
         }
     }
 
@@ -2489,8 +2472,8 @@ function frame(owners) {
 }
 
 /**
- * Adds the current creature of the given owner to the corresponding field.
- * The strings are simply concatenated line by line to the current field value.
+ * Adds the current creature of the given owner to the corresponding canvas.
+ * The strings are simply concatenated line by line to the current canvas value.
  * @param {Number} owner The owner, being either the player or the enemy.
  */
 function addCurCreature(owner) {
@@ -2503,7 +2486,7 @@ function addCurCreature(owner) {
 
     % Calculate the needed padding to center the current creature.
     % Uses the complete width and the amount of cells occupied by the creature string.
-    var paddingSize = FIELD_WIDTH - creature[IMAGE][0].length + 1;
+    var paddingSize = BOARD_CHARS_W - creature[IMAGE][0].length + 1;
     var paddingSizeLeft = Math.floor(paddingSize * 0.5);
     var paddingSizeRight = Math.ceil(paddingSize * 0.5);
     % Create padding string
@@ -2521,22 +2504,22 @@ function addCurCreature(owner) {
 
     % Add the string of the new creature
     var valueString = "";
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
+    for (var m = 0; m < BOARD_CHARS_H; m++) {
         % Centering the creature and add padding top and bottom
         if (startM <= m && m < startM + creature[IMAGE].length) {
             var lineString = creature[IMAGE][m - startM];
-            if (lineString.length > FIELD_WIDTH) {
-                lineString = lineString.substring(0, FIELD_WIDTH + 1);
+            if (lineString.length > BOARD_CHARS_W) {
+                lineString = lineString.substring(0, BOARD_CHARS_W + 1);
             }
             valueString = paddingLeft + lineString + paddingRight;
         } else {
             valueString = EMPTY_LINE;
         }
-        % Add to the field belonging to the owner
+        % Add to the canvas belonging to the owner
         if (owner == PLAYER) {
-            addToField("player" + m, valueString);
+            addToCanvas("player" + m, valueString);
         } else {
-            addToField("enemy" + m, valueString);
+            addToCanvas("enemy" + m, valueString);
         }
     }
 }
@@ -2570,21 +2553,21 @@ function drawPlayer() {
 }
 
 /**
- * Completely fills the enemy and the player fields with empty lines.
+ * Completely fills the enemy and the player canvas with empty lines.
  */
 function fill() {
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
-        setField("enemy" + m, EMPTY_LINE);
-        setField("player" + m, EMPTY_LINE);
+    for (var m = 0; m < BOARD_CHARS_H; m++) {
+        setCanvas("enemy" + m, EMPTY_LINE);
+        setCanvas("player" + m, EMPTY_LINE);
     }
 }
 
 /**
- * Shift the value of the given field.
+ * Shift the value of the given canvas.
  *
- * @param {Number} id The id of the field.
+ * @param {Number} id The id of the canvas.
  */
-function shiftFieldLeft(id) {
+function shiftCanvasLeft(id) {
     var cell = this.getField(id);
     cell.delay = true;
     cell.value = cell.value.substring(1);
@@ -2592,12 +2575,12 @@ function shiftFieldLeft(id) {
 }
 
 /**
- * Set string of the given field.
+ * Set string of the given canvas.
  *
- * @param {Number} id The id of the field.
+ * @param {Number} id The id of the canvas.
  * @param {String} value The value to set.
  */
-function setField(id, value) {
+function setCanvas(id, value) {
     var cell = this.getField(id);
     cell.delay = true;
     cell.value = value;
@@ -2605,12 +2588,12 @@ function setField(id, value) {
 }
 
 /**
- * Add string to the given field.
+ * Add string to the given canvas.
  *
- * @param {Number} id The id of the field.
+ * @param {Number} id The id of the canvas.
  * @param {String} value The value to add.
  */
-function addToField(id, value) {
+function addToCanvas(id, value) {
     var cell = this.getField(id);
     cell.delay = true;
     cell.value += value;
@@ -2618,7 +2601,7 @@ function addToField(id, value) {
 }
 
 /**
- * Print information to the information-gui.
+ * Print information to the information-GUI.
  * @param {String} text The text to print.
  */
 function printInfoText(text) {
@@ -2630,10 +2613,10 @@ function printInfoText(text) {
 }
 
 /**
- * Print information to the information-gui animated.
+ * Print information to the information-GUI animated.
  * For this each time this function is called only two character
- * are added to the gui (from the animatedString variable).
- * Overrides last gui value.
+ * are added to the GUI (from the animatedString variable).
+ * Overrides last GUI value.
  * @return {Boolean} Returns true if the string was complete, false else.
  */
 function printTextAnimated() {
@@ -2656,7 +2639,7 @@ function printTextAnimated() {
 }
 
 /**
- * Add information to the information-gui.
+ * Add information to the information-GUI.
  * @param {String} text The text to add.
  */
 function addInfoText(text) {
@@ -2668,10 +2651,10 @@ function addInfoText(text) {
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
@@ -2684,9 +2667,9 @@ function addInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \TextField[backgroundcolor=white, bordercolor=white,
-                    name=hintbox, readonly=true, hidden]{}
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                \TextField[name=hintbox,%
+                    bordercolor=white, backgroundcolor=white, readonly]{}
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -2694,30 +2677,31 @@ function addInfoText(text) {
             \end{flushright}%
         \end{multicols}
 
-        % Calculate the max width and height of a block
-        \def\blocksizeH{\dimexpr (250 pt)/\fieldHeight \relax}
-        \def\blocksizeW{\dimexpr (250 pt) \relax}
+        % Calculate the max height of a line
+
+        \def\lineHeight{\dimexpr (0.2955\paperheight)/\boardCharsH \relax}
+        \def\lineWidth{\dimexpr (0.2955\paperheight) \relax}
 
         \begin{multicols}{2}
 
             \begin{tcolorbox}%
-                \TextField[name=enemyname, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly=true]{}\newline
+                \TextField[name=enemyname, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=enemyhp, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly=true]{}\newline
+                \TextField[name=enemyhp, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=enemystatus, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly=true]{}%
+                \TextField[name=enemystatus, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}%
             \end{tcolorbox}%
 
             \vspace{2.5cm}
 
             \begin{center}
-                \xintFor* #1 in {\xintSeq{0}{\fieldHeight-1}} \do {%
+                \xintFor* #1 in {\xintSeq{0}{\boardCharsH-1}} \do {%
                     \TextField[%
-                        width=\blocksizeW, height=\blocksizeH,%
-                        bordercolor=white, name=player#1, readonly=true%
+                        name=player#1, width=\lineWidth, height=\lineHeight,%
+                        bordercolor=, backgroundcolor=, readonly%
                     ]{}%
                     \\[0pt]%
                 }%
@@ -2726,10 +2710,10 @@ function addInfoText(text) {
         \columnbreak%
 
             \begin{center}
-                \xintFor* #1 in {\xintSeq{0}{\fieldHeight-1}} \do {%
+                \xintFor* #1 in {\xintSeq{0}{\boardCharsH-1}} \do {%
                     \TextField[%
-                        width=\blocksizeW, height=\blocksizeH,%
-                        bordercolor=white, name=enemy#1, readonly=true%
+                        name=enemy#1, width=\lineWidth, height=\lineHeight,%
+                        bordercolor=, backgroundcolor=, readonly%
                     ]{}%
                     \\[0pt]%
                 }%
@@ -2738,14 +2722,14 @@ function addInfoText(text) {
             \vspace{2.5cm}
 
             \begin{tcolorbox}%
-                \TextField[name=playername, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly=true]{}\newline
+                \TextField[name=playername, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=playerhp, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly=true]{}\newline
+                \TextField[name=playerhp, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=playerstatus, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly=true]{}%
+                \TextField[name=playerstatus, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}%
             \end{tcolorbox}%
 
         \end{multicols}
@@ -2772,50 +2756,50 @@ function addInfoText(text) {
         %%%%%%%%%%%%%%%%
         \begin{center}
             \begin{tcolorbox}
-                \TextField[name=info, width=\linewidth, readonly=true]{}
+                \TextField[name=info, width=\linewidth, bordercolor=, backgroundcolor=, readonly]{}
             \end{tcolorbox}
 
             % Game related buttons
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=button1, bordercolor=white, borderwidth=0]{
+                \PushButton[name=button1, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button1txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly=true]{}%
+                        \TextField[name=button1txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 } &
-                \PushButton[name=button2, bordercolor=white, borderwidth=0]{
+                \PushButton[name=button2, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button2txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly=true]{}%
+                        \TextField[name=button2txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 }\\
-                \PushButton[name=button3, bordercolor=white, borderwidth=0]{
+                \PushButton[name=button3, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button3txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly=true]{}%
+                        \TextField[name=button3txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 } &
-                \PushButton[name=button4, bordercolor=white, borderwidth=0]{
+                \PushButton[name=button4, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button4txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly=true]{}%
+                        \TextField[name=button4txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 }\\
-                \PushButton[name=back, bordercolor=white, borderwidth=0]{
+                \PushButton[name=back, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Back\strut
                     \end{tcolorbox}
                 } &
-                \PushButton[name=restart, bordercolor=white, borderwidth=0]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart game\strut
@@ -2830,13 +2814,12 @@ function addInfoText(text) {
                 {On, Off}
 
             \xintFor* #1 in {\xintSeq{0}{\atkAnimCells-1}} \do {%
-                \TextField[%
-                    bordercolor=, backgroundcolor=,
-                    name=atkanim#1, readonly=true, borderwidth=0pt, hidden
+                \TextField[name=atkanim#1,
+                    bordercolor=, backgroundcolor=, borderwidth=0pt, readonly, hidden
                 ]{}%
             }%
 
-            \TextField[bordercolor=white, name=tooltiptxt, readonly=true, hidden]{}
+        \TextField[name=tooltiptxt, bordercolor=, backgroundcolor=gray, readonly, hidden]{}
 
         \columnbreak
             \centering
