--- a/src/connectfour.tex
+++ b/src/connectfour.tex
@@ -1,12 +1,10 @@
-\documentclass[12pt, a4paper, footexclude, headexclude]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage[ngerman]{babel}
-\usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
 \usepackage{multicol}
 
@@ -22,34 +20,41 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\def\fieldWidth{8}
-\def\fieldHeight{8}
-% TODO make these selectable in the gui
-\def\playerCount{3}
-\def\winningPieces{4}
+% The board width can be adjusted, but the height should always be the same as the board width
+% width should not be greater than 20 and should at least be 4.
+\def\boardWidth{8}
+\def\boardHeight{\boardWidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{insDLJS}[]{JSDateiname}{irgendeinTitel}
+\begin{insDLJS}[]{JSDateiname}{connectfour}
 
 const GAME_DESC = "Connect four is a connection board game. The goal is to place a set amount\
-of stones (4) with the given playercolor in such a way that they lie on a strait line.\
+of stones (4) with the given player color in such a way that they lie on a strait line.\
 Each turn a player can choose a column in which his stone should be placed.\
 The stones will be placed at the bottom of the column or on top of the current top stone.";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
-const PLAYER_COUNT = AFMakeNumber(\playerCount);
-const WINNING_PIECES = AFMakeNumber(\winningPieces);
+const BOARD_WIDTH = AFMakeNumber(\boardWidth);
+const BOARD_HEIGHT = AFMakeNumber(\boardHeight);
 
 % Constants
 const EMPTY = 0;
 
+% Define directions
+const DIRS = [
+    0, 1,
+    1, 1,
+    1, 0,
+    1, -1
+]
+
 % Globals
-% The game field array
-var complField = new Array();
+var playerCount;
+var winningPieces;
+% The game board array
+var complBoard = new Array();
 var activePlayer = 0;
 var gameover = false;
 
@@ -59,72 +64,81 @@ const COLORS = new Array(
     [ "RGB", 0.843, 0.078, 0.058 ],
     [ "RGB", 0.203, 0.603, 0.054 ],
     [ "RGB", 0.078, 0.305, 0.560 ],
-    [ "RGB", 0.560, 0.078, 0.533 ]
+    [ "RGB", 0.560, 0.078, 0.533 ],
+    [ "RGB", 1.000, 0.650, 0.000 ],
+    [ "RGB", 0.999, 0.004, 0.600 ]
 );
 
 const HIGHLIGHT_COLOR = [ "RGB", 0.984, 0.960, 0.176 ];
 
 %%%%%%%%%%%%%%%%%%
-% Initialisation %
+% Initialization %
 %%%%%%%%%%%%%%%%%%
 /**
- * Initialise the default game state.
+ * Initialize the default game state.
  */
-function initialise() {
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
-        var tmp = new Array();
-        for (var column = 0; column < FIELD_WIDTH; column++) {
-            tmp.push(EMPTY);
+function initialize() {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        var row = new Array();
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            row.push(EMPTY);
         }
-        complField.push(tmp);
+        complBoard.push(row);
     }
-
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
 
     printInfoText("Player " + (activePlayer + 1) + ": Please select a column.");
 
-    % Init the GUI
-    initialiseButtons();
+    % Initialize the GUI
+    initializeButtons();
 
     drawAll();
 }
 
 /**
- * Initialise all buttons from the GUI.
+ * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct colors.
  */
-function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
-    this.getField("restart").setAction("MouseUp", "restart();");
-    this.getField("restart").highlight="none";
+function initializeButtons() {
+    % Disables the rectangle around a button after the click
+    app.focusRect = false;
 
-    % Each field needs to be connected to an input function
+    % Assign each button the corresponding function and disable the highlights
+    this.getField("restart").setAction("MouseUp", "restart();");
+
+    % Each cell needs to be connected to an input function
     var funcName = "addToColumn";
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        var callbackName = funcName + "(" + x.toString() + ");";
-        this.getField("col" + x).setAction("MouseDown", callbackName);
-        this.getField("col" + x).highlight="none";
-        this.getField("col" + x).borderColor = color.transparent;
+    for (var n = 0; n < BOARD_WIDTH; n++) {
+        var callbackName = funcName + "(" + n.toString() + ");";
+        this.getField("col" + n).setAction("MouseDown", callbackName);
     }
+
+    this.getField("cmPlayer").currentValueIndices = 1;
+    this.getField("cmWin").currentValueIndices = 1;
+    % Get the number of players and the number of pieces to win
+    % from the choice menus
+    playerCount = this.getField("cmPlayer").value;
+    winningPieces = this.getField("cmWin").value;
 
     % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
-    this.getField("tooltipbtn").highlight="none";
 }
 
 /**
- * Restarts the game by clearing the field array.
+ * Restarts the game by clearing the board array.
  */
 function restart() {
-    % Clear complField and redraw
-    var field;
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
+    % Get the number of players and the number of pieces to win
+    % from the choise menus
+    playerCount = this.getField("cmPlayer").value;
+    winningPieces = this.getField("cmWin").value;
 
-            draw(x, y);
+    % Clear complBoard and redraw
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            complBoard[m][n] = EMPTY;
+
+            draw(m, n);
         }
     }
 
@@ -134,9 +148,9 @@ function restart() {
 }
 
 /**
- * Enable or disable the tooltip
+ * Enable or disable the tooltip.
  *
- * @param {Boolean} on Enable or disable tooltip
+ * @param {Boolean} on Enable or disable tooltip.
  */
 function tooltip(on) {
     if (on) {
@@ -144,26 +158,23 @@ function tooltip(on) {
         % and adjust the size so the text can be displayed
         var field = this.getField("tooltiptxt");
         field.delay = true;
+        field.hidden = false;
         field.value = GAME_DESC;
 
         field.multiline = true;
         field.textSize = 16;
-        field.fillColor = color.gray;
-        % hight 842, width 596
+        % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
         field.rect = [128, 601, 468, 401];
+
+        this.getField("tooltiptxt").setFocus();
 
         field.delay = false;
     } else {
         % Remove the field such that it is not visible
         var field = this.getField("tooltiptxt");
         field.delay = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
+        field.hidden = true;
         field.delay = false;
     }
 }
@@ -172,94 +183,90 @@ function tooltip(on) {
 % Gamelogic %
 %%%%%%%%%%%%%
 /**
- * Add a stone to the selected column (x).
+ * Add a stone to the selected column (n).
  * Also selects new player and redraws.
  *
- * @param {Number} x The column to place the stone in.
+ * @param {Number} n The column to place the stone in.
  */
-function addToColumn(x) {
+function addToColumn(n) {
     if (gameover) {
         return;
     }
 
-    var y = getYFromX(x);
+    var m = getMFromN(n);
     % Column is full
-    if (y == -1) {
+    if (m == -1) {
         printInfoText("Column is full. Player " + (activePlayer + 1) + ": Select a valid column.");
         return;
     }
-    complField[y][x] = activePlayer + 1;
+    complBoard[m][n] = activePlayer + 1;
 
-    checkGameover(x, y);
+    checkGameover(m, n);
 
     activePlayer++;
     % Reset player count
-    if (activePlayer >= PLAYER_COUNT) {
-        activePlayer -= PLAYER_COUNT;
+    if (activePlayer >= playerCount) {
+        activePlayer -= playerCount;
     }
 
     if (!gameover) {
         printInfoText("Player " + (activePlayer + 1) + ": Please select a column.");
     }
 
-    draw(x, y);
+    draw(m, n);
+    this.getField("cell" + m + "-" + n).setFocus();
 }
 
 /**
- * Returns the first empty spot for the given column (x).
+ * Returns the first empty cell for the given column (n).
  *
- * @param {Number} x The column for which the y should be returned.
+ * @param {Number} n The column for which the m should be returned.
  */
-function getYFromX(x) {
-    for (var y = 0; y < FIELD_HEIGHT; y++) {
-        if (complField[y][x] != EMPTY) {
-            return y - 1;
+function getMFromN(n) {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        if (complBoard[m][n] != EMPTY) {
+            return m - 1;
         }
     }
-    return FIELD_HEIGHT - 1;
+    return BOARD_HEIGHT - 1;
 }
 
 /**
  * Checks whether the current move concludes the game and someone won.
- * The position of the last move is used to check the neighbourhood for
+ * The position of the last move is used to check the neighborhood for
  * potential lines in all possible directions. Sets gameover if
  * a line was found.
  *
- * @param {Number} x The x coordinate
- * @param {Number} y The y coordinate
+ * @param {Number} m The m coordinate
+ * @param {Number} n The n coordinate
  */
-function checkGameover(x, y) {
+function checkGameover(m, n) {
     var count = 0;
     var maxCount = 0;
-    % Define directions
-    var directions = [
-        0, 1,
-        1, 1,
-        1, 0,
-        1, -1
-    ]
     % Iterate directions
-    for (var dirIdx = 0; dirIdx < directions.length; dirIdx += 2) {
+    for (var dirIdx = 0; dirIdx < DIRS.length; dirIdx += 2) {
         count = 0;
         maxCount = 0;
         % Count succeeding stones
-        for (var wp = -WINNING_PIECES + 1; wp < WINNING_PIECES; wp++) {
-            var nx = x + directions[dirIdx] * wp;
-            var ny = y + directions[dirIdx + 1] * wp;
-            if (nx < 0 || nx >= FIELD_WIDTH ||
-                ny < 0 || ny >= FIELD_HEIGHT ||
-                complField[ny][nx] != activePlayer + 1
+        for (var wp = -winningPieces + 1; wp < winningPieces; wp++) {
+            var mm = m + DIRS[dirIdx] * wp;
+            var nn = n + DIRS[dirIdx + 1] * wp;
+            if (mm < 0 || mm >= BOARD_HEIGHT ||
+                nn < 0 || nn >= BOARD_WIDTH ||
+                complBoard[mm][nn] != activePlayer + 1
             ) {
                 count = 0;
             } else {
                 count++;
-                maxCount = count;
+                if (count > maxCount) {
+                    maxCount = count;
+                }
             }
         }
         % If there are enough pieces found, color the winning pieces and set gameover
-        if (maxCount >= WINNING_PIECES) {
+        if (maxCount >= winningPieces) {
             gameover = true;
-            colorWinner(x, y, dirIdx);
+            colorWinner(m, n, dirIdx);
             printInfoText("The winner is: Player " + (activePlayer + 1));
         }
     }
@@ -269,65 +276,59 @@ function checkGameover(x, y) {
 % Draw and coloring %
 %%%%%%%%%%%%%%%%%%%%%
 /**
- * Draws the complete field.
+ * Draws the complete board.
  */
 function drawAll() {
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            draw(x, y);
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            draw(m, n);
         }
     }
 }
 
 /**
- * Draw the field at the coordinates x, y.
+ * Draw the cell at the coordinates m, n.
  *
- * @param {Number} x The x coordinate
- * @param {Number} y The y coordinate
+ * @param {Number} m The m coordinate
+ * @param {Number} n The n coordinate
  */
-function draw(x, y) {
-    field = this.getField("pos" + x + "-" + y);
-    field.delay = true;
-    var value = complField[y][x];
+function draw(m, n) {
+    var cell = this.getField("cell" + m + "-" + n);
+    cell.delay = true;
+    var value = complBoard[m][n];
     if (value > EMPTY) {
-        field.fillColor = COLORS[value - 1];
+        cell.fillColor = COLORS[value - 1];
     } else {
-        field.fillColor = color.white;
-        field.borderColor = color.transparent;
+        cell.fillColor = color.white;
+        cell.borderColor = color.transparent;
     }
-    field.delay = false;
+    cell.delay = false;
 }
 
 /**
- * Marks all stones in a line with x, y and the given direction (dirIdx),
- * given the stone has the same player index as the stone at x, y.
+ * Marks all stones in a line with m, n and the given direction (dirIdx),
+ * given the stone has the same player index as the stone at m, n.
  *
- * @param {Number} x The x coordinate
- * @param {Number} y The y coordinate
+ * @param {Number} m The m coordinate
+ * @param {Number} n The n coordinate
  * @param {Number} dirIdx The direction index
  */
-function colorWinner(x, y, dirIdx) {
-    var directions = [
-        0, 1,
-        1, 1,
-        1, 0,
-        1, -1
-    ]
-    % Allows for highlighting all stones left and right from the x, y
+function colorWinner(m, n, dirIdx) {
+    % Allows for highlighting all stones left and right from the m, n
     for (var mul = -1; mul < 2; mul += 2) {
-        for (var wp = 0; wp < WINNING_PIECES; wp++) {
-            var nx = x + directions[dirIdx] * wp * mul;
-            var ny = y + directions[dirIdx + 1] * wp * mul;
-            if (nx < 0 || nx >= FIELD_WIDTH ||
-                ny < 0 || ny >= FIELD_HEIGHT ||
-                complField[ny][nx] != activePlayer + 1
+        for (var wp = 0; wp < winningPieces; wp++) {
+            var mm = m + DIRS[dirIdx] * wp * mul;
+            var nn = n + DIRS[dirIdx + 1] * wp * mul;
+            if (mm < 0 || mm >= BOARD_HEIGHT ||
+                nn < 0 || nn >= BOARD_WIDTH ||
+                complBoard[mm][nn] != activePlayer + 1
             ) {
-                wp = WINNING_PIECES;
+                wp = winningPieces;
             } else {
-                var field = this.getField("pos" + nx + "-" + ny);
-                field.delay = true;
-                field.borderColor = HIGHLIGHT_COLOR;
-                field.delay = false;
+                var cell = this.getField("cell" + mm + "-" + nn);
+                cell.delay = true;
+                cell.borderColor = HIGHLIGHT_COLOR;
+                cell.delay = false;
             }
         }
     }
@@ -347,10 +348,10 @@ function printInfoText(text) {
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
@@ -363,7 +364,7 @@ function printInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -371,53 +372,94 @@ function printInfoText(text) {
             \end{flushright}%
         \end{multicols}
 
-        \FPeval{\result}{(\fieldWidth * 3 + 3)}
-        \def\blocksize{\dimexpr (\linewidth-\result pt)/\fieldWidth \relax}
+        % Dynamically adjust the cell width to the number of cells per column
+        \FPeval{\result}{\boardWidth * 3 - 2} % chktex 8
+        \def\cellsize{\dimexpr (\linewidth-\result pt)/\boardWidth \relax}
 
         \begin{tcolorbox}
             % Column selection buttons
-            \begin{tabularx}{\textwidth}{@{} *{\fieldWidth}{X} @{}}%
-                \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
-                    \PushButton[name=col#1, bordercolor=black]{
-                        \begin{tcolorbox}
-                            \centering
-                            Col#1
+            \begin{tabularx}{\linewidth}{*{\boardWidth}{@{\,}X@{\,}}}%
+                \xintFor* #1 in {\xintSeq{0}{\boardWidth-1}} \do {%
+                    \PushButton[name=col#1, bordercolor=, backgroundcolor=, borderwidth=0]{
+                        \begin{tcolorbox}[left=0pt, right=0pt, halign=center]
+                            % https://tex.stackexchange.com/questions/131873/
+                            \ifdim\linewidth>20pt
+                                C%
+                            \fi%
+                            \ifdim\linewidth>30pt
+                                ol%
+                            \fi%
+                            \ifdim\linewidth>45pt
+                                umn%
+                            \fi%
+                            \ifdim\linewidth>25pt
+                                \(\;\)%
+                            \fi%
+                            #1%
                         \end{tcolorbox}
-                    }
+                    }%
                     % Have the cell divider for all elements
                     % that are not the last one
                     \xintifForLast{}{&}%
                 }%
             \end{tabularx}%
-            % The gamefield
-            \begin{flushright}
-                \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
-                    \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
+            % The game board
+            \begin{center}
+                \tiny
+                \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
+                    \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[%
-                            width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1-#2, readonly=true]{}\hspace{3pt}%
-                    }\vspace{3pt}
-                    \newline
-                }
-            \end{flushright}
+                            name=cell#1-#2, width=\cellsize, height=\cellsize,%
+                            bordercolor=white, readonly%
+                        ]{}%
+                        % Have space between all cells that are not the last one
+                        \xintifForLast{}{\hspace{3pt}}%
+                    }\vspace{3pt}\\[-1pt]%
+                }%
+            \end{center}
         \end{tcolorbox}
 
+        %%%%%%%%%%%%%%%%%%%%%%%
+        % Commandredifinition %
+        % https://www.dickimaw-books.com/latex/admin/html/eforms.shtml
+        %%%%%%%%%%%%%%%%%%%%%%%
+        \renewcommand*{\DefaultWidthofChoiceMenu}{2.5ex}
+        \renewcommand*{\DefaultHeightofChoiceMenu}{2.04ex}
+
+        %%%%%%%%%%%%%%%%
+        % GUI elements %
+        %%%%%%%%%%%%%%%%
         % Game related buttons
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=restart, bordercolor=white]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart game\strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, width=\linewidth, readonly=true]{}
-                \end{tcolorbox}
+                    \TextField[name=info, width=\linewidth,
+                        bordercolor=, backgroundcolor=, readonly]{}
+                \end{tcolorbox}\\
+                \begin{tcolorbox}%
+                    \centering%
+                    \ChoiceMenu[name=cmPlayer, width=2cm,
+                        bordercolor=gray, combo, edit=false]{Playercount: }{%
+                        2, 3, 4, 5, 6%
+                    }%
+                \end{tcolorbox} &
+                \begin{tcolorbox}%
+                    \centering%
+                    \ChoiceMenu[name=cmWin, width=2cm,
+                        bordercolor=gray, combo, edit=false]{Winning Pieces: }{%
+                        3, 4, 5, 6%
+                    }%
+                \end{tcolorbox}%
             \end{tabularx}
         \end{center}
 
-        \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
+        \TextField[name=tooltiptxt, bordercolor=, backgroundcolor=gray, readonly, hidden]{}
 
     \end{Form}
 
