--- a/src/dontbreaktheice.tex
+++ b/src/dontbreaktheice.tex
@@ -1,12 +1,10 @@
-\documentclass[12pt, a4paper, footexclude, headexclude]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[margin=0.5in]{geometry}
+\usepackage[margin=0.5in, bottom=0.0pt]{geometry}
 
-\usepackage[ngerman]{babel}
-\usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
 \usepackage{multicol}
 
@@ -24,22 +22,23 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\def\fieldWidth{10}
-\def\fieldHeight{12}
+% Values can be changed
+\def\boardWidth{10}
+\def\boardHeight{12}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{insDLJS}[]{JSDateiname}{DBTI}
+\begin{insDLJS}[]{JSDateiname}{dbti}
 
-const GAME_DESC = "The goal of this game is to get from the bottom of the field to the top,\
-while only using specified fields. These fields are shown once in the beginning (red).\
-Therefore the player needs to remember the path and click the right fields in\
-the right order. If the user misssteps the game is lost";
+const GAME_DESC = "The goal of this game is to get from the bottom of the board to the top,\
+while only using specified cells. These cells are shown once in the beginning (red).\
+Therefore the player needs to remember the path and click the right cells in\
+the right order. If the user miss steps the game is lost";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+const BOARD_WIDTH = AFMakeNumber(\boardWidth);
+const BOARD_HEIGHT = AFMakeNumber(\boardHeight);
 
 % Constants
 % For the path generation
@@ -47,25 +46,28 @@ const EMPTY = 0;
 const REACHABLE = 1;
 const FORBIDDEN = -1;
 const IS_PATH = -2;
-% For the visualisation
+% For the visualization
 const HIDDEN = 0;
 const R_REVEAL = 1;
 const W_REVEAL = -1;
 
+const M = 0;
+const N = 1;
+
 % Globals
 % Animation interval variable
 var run;
-% The game field array
-var complField = new Array();
+% The game board array
+var complBoard = new Array();
 var freePath = new Array();
 % Lock if the game has ended
 var gameover = false;
-% Indicater which piece was last animated
+% Indicator which piece was last animated
 var drawPiece = 0;
 % Needed for so one cant play before the animation is finished
 var play = false;
-% Which field was found last
-var currentField = -1;
+% Which board was found last
+var currentBoard = -1;
 
 % Color data
 const COLORS = new Array(
@@ -80,64 +82,62 @@ const COLORS = new Array(
 % Helper %
 %%%%%%%%%%
 /**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
+ * Returns a random number between 0 and the parameter.
+ * @param {Number} max The upper bound
  */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Initialisation and Restart %
+% Initialization and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 /**
- * Initialise the default game state.
+ * Initialize the default game state.
  */
-function initialise() {
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
-        var tmp = new Array();
-        for (var column = 0; column < FIELD_WIDTH; column++) {
-            tmp.push(EMPTY);
+function initialize() {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        var row = new Array();
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            row.push(EMPTY);
         }
-        complField.push(tmp);
+        complBoard.push(row);
     }
 
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
+    printInfoText("Select cells and find a way across.");
 
-    printInfoText("Select fields and find a way across.");
-
-    % Init the GUI
-    initialiseButtons();
+    % Initialize the GUI
+    initializeButtons();
 
     createPath();
 }
 
 /**
- * Initialise all buttons from the GUI.
+ * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct colors.
  */
-function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
-    this.getField("restart").setAction("MouseUp", "restart();");
-    this.getField("restart").highlight="none";
+function initializeButtons() {
+    % Disables the rectangle around a button after the click
+    app.focusRect = false;
 
-    var funcName = "revealField";
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
+    % Assign each button the corresponding function and disable the highlights
+    this.getField("restart").setAction("MouseUp", "restart();");
+
+    var funcName = "revealCell";
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            var callbackName = funcName + "(" + m.toString() + "," + n.toString() + ");";
+            this.getField("cell" + m + "-" + n).setAction("MouseDown", callbackName);
         }
     }
 
     % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
-    this.getField("tooltipbtn").highlight="none";
 }
 
 /**
- * Restarts the game by clearing the field array and creating a new path.
+ * Restarts the game by clearing the board array and creating a new path.
  */
 function restart() {
     % Prevent multiple restart processes at the same time
@@ -145,37 +145,37 @@ function restart() {
          return;
     }
 
-    % Clear complField and redraw
-    var field;
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
+    % Clear complBoard and redraw
+    var cell;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            complBoard[m][n] = EMPTY;
 
-            field = this.getField("pos" + x + "-" + y);
-            field.delay = true;
-            field.borderColor = color.white;
-            field.fillColor = color.white;
-            field.delay = false;
+            cell = this.getField("cell" + m + "-" + n);
+            cell.delay = true;
+            cell.borderColor = color.white;
+            cell.fillColor = color.white;
+            cell.delay = false;
         }
     }
 
-    % Reset field for other use
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
+    % Reset board for other use
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            complBoard[m][n] = EMPTY;
         }
     }
 
     gameover = false;
     play = false;
-    printInfoText("Select fields and find a way across.");
+    printInfoText("Select cells and find a way across.");
     createPath();
 }
 
 /**
- * Enable or disable the tooltip
+ * Enable or disable the tooltip.
  *
- * @param {Boolean} on Enable or disable tooltip
+ * @param {Boolean} on Enable or disable tooltip.
  */
 function tooltip(on) {
     if (on) {
@@ -183,26 +183,23 @@ function tooltip(on) {
         % and adjust the size so the text can be displayed
         var field = this.getField("tooltiptxt");
         field.delay = true;
+        field.hidden = false;
         field.value = GAME_DESC;
 
         field.multiline = true;
         field.textSize = 16;
-        field.fillColor = color.gray;
-        % hight 842, width 596
+        % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
         field.rect = [128, 601, 468, 401];
+
+        this.getField("tooltiptxt").setFocus();
 
         field.delay = false;
     } else {
         % Remove the field such that it is not visible
         var field = this.getField("tooltiptxt");
         field.delay = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
+        field.hidden = true;
         field.delay = false;
     }
 }
@@ -213,63 +210,63 @@ function tooltip(on) {
 /**
  * Creates the path from bottom to top.
  * This is done by marking the bot and top row as unreachable first.
- * Afterwards a list of all possible slots is created from which
+ * Afterwards a list of all possible cells is created from which
  * a random one is selected until only one path is left.
- * After each draw it needs to be checked wether there is still a path,
- * if there is none the field is added to the final path, since there is
- * none without this field. When the list is empty only one path remains.
+ * After each draw it needs to be checked whether there is still a path,
+ * if there is none the cell is added to the final path, since there is
+ * none without this cell. When the list is empty only one path remains.
  *
  * Starts an animated draw after generating.
  */
 function createPath() {
     freePath = new Array();
 
-    var startX = getRandomInt(FIELD_WIDTH);
-    var endX = getRandomInt(FIELD_WIDTH);
+    var startN = getRandomInt(BOARD_WIDTH);
+    var endN = getRandomInt(BOARD_WIDTH);
 
-    % Mark bottom and top rowas unselectable
-    for (var ix = 0; ix < FIELD_WIDTH; ix++) {
-        complField[0][ix] = FORBIDDEN;
-        complField[FIELD_HEIGHT - 1][ix] = FORBIDDEN;
+    % Mark bottom and top row as not select able
+    for (var n = 0; n < BOARD_WIDTH; n++) {
+        complBoard[0][n] = FORBIDDEN;
+        complBoard[BOARD_HEIGHT - 1][n] = FORBIDDEN;
     }
 
-    % Create a list of all potential fields
-    var fieldList = [];
-    for (var i = 0; i < FIELD_WIDTH; i++) {
-        for (var j = 1; j < FIELD_HEIGHT - 1; j++) {
-            fieldList.push([i, j]);
+    % Create a list of all potential cells
+    var cellList = [];
+    for (var m = 1; m < BOARD_HEIGHT - 1; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            cellList.push([m, n]);
         }
     }
-    fieldList.push([startX, FIELD_HEIGHT - 1]);
+    cellList.push([BOARD_HEIGHT - 1, startN]);
 
-    % Loop as long as there are entrys in the list
-    while (fieldList.length !== 0) {
+    % Loop as long as there are entries in the list
+    while (cellList.length !== 0) {
         % Get one random entry
         % Exclude the last entry since the algorithm does not
         % work otherwise, not sure why
-        var rnd = getRandomInt(fieldList.length - 1);
-        var elem = fieldList[rnd];
+        var rnd = getRandomInt(cellList.length - 1);
+        var elem = cellList[rnd];
 
-        % Remove and mark the field
-        fieldList.splice(rnd, 1);
-        complField[elem[1]][elem[0]] = FORBIDDEN;
-        % If there is no path available after marking this field,
-        % the field is needed for the path
-        if (!doesPathExist([startX, FIELD_HEIGHT - 1], [endX, 0], complField)) {
-            complField[elem[1]][elem[0]] = EMPTY;
+        % Remove and mark the cell
+        cellList.splice(rnd, 1);
+        complBoard[elem[M]][elem[N]] = FORBIDDEN;
+        % If there is no path available after marking this cell,
+        % the cell is needed for the path
+        if (!doesPathExist([BOARD_HEIGHT - 1, startN], [0, endN], complBoard)) {
+            complBoard[elem[M]][elem[N]] = EMPTY;
         }
     }
 
-    freePath = getPath([startX, FIELD_HEIGHT - 1], [endX, 0], complField);
+    freePath = getPath([BOARD_HEIGHT - 1, startN], [0, endN], complBoard);
 
-    % Reset field for other use
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
+    % Reset board for other use
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            complBoard[m][n] = EMPTY;
         }
     }
 
-    currentField = -1;
+    currentBoard = -1;
     drawAll();
 
     % Animation interval
@@ -278,46 +275,46 @@ function createPath() {
 
 /**
  * Creates a path from the start position to the end position.
- * For this a list is generated to which all pathfields should be added.
- * Beginning with the start position the neighbourhood is searched for
- * the next field.
+ * For this a list is generated to which all pathcells should be added.
+ * Beginning with the start position the neighborhood is searched for
+ * the next cell.
  * Works best if there is only one path.
  *
  * @param {Number} start The start 2D position.
  * @param {Number} end The end 2D position.
- * @param {Array} The field in which to search.
+ * @param {Array} The board on which to search.
  * @return {Array} An array containing all positions of the path.
  */
-function getPath(start, end, field) {
+function getPath(start, end, board) {
     var pathList = [start];
-    % While the target is not reached search neighbourhood
-    while (pathList[pathList.length - 1][0] !== end[0] ||
-        pathList[pathList.length - 1][1] !== end[1]
+    % While the target is not reached search neighborhood
+    while (pathList[pathList.length - 1][M] !== end[M] ||
+        pathList[pathList.length - 1][N] !== end[N]
     ) {
         var elem = pathList[pathList.length - 1];
-    	field[elem[1]][elem[0]] = IS_PATH;
+    	board[elem[M]][elem[N]] = IS_PATH;
 
         % Push next piece
-        var xpo = elem[0] + 1;
-        var xmo = elem[0] - 1;
-        var ypo = elem[1] + 1;
-        var ymo = elem[1] - 1;
+        var mAdd = elem[M] + 1;
+        var mSub = elem[M] - 1;
+        var nAdd = elem[N] + 1;
+        var nSub = elem[N] - 1;
 
         var added = false;
-       	if (ypo < FIELD_HEIGHT && field[ypo][elem[0]] == REACHABLE) {
-        	pathList.push([elem[0], ypo]);
+       	if (mAdd < BOARD_HEIGHT && board[mAdd][elem[N]] == REACHABLE) {
+        	pathList.push([mAdd, elem[N]]);
         	added = true;
         }
-        if (ymo >= 0 && field[ymo][elem[0]] == REACHABLE) {
-        	pathList.push([elem[0], ymo]);
+        if (mSub >= 0 && board[mSub][elem[N]] == REACHABLE) {
+        	pathList.push([mSub, elem[N]]);
         	added = true;
         }
-        if (xpo < FIELD_WIDTH && field[elem[1]][xpo] == REACHABLE) {
-        	pathList.push([xpo, elem[1]]);
+        if (nAdd < BOARD_WIDTH && board[elem[M]][nAdd] == REACHABLE) {
+        	pathList.push([elem[M], nAdd]);
         	added = true;
         }
-        if (xmo >= 0 && field[elem[1]][xmo] == REACHABLE) {
-        	pathList.push([xmo, elem[1]]);
+        if (nSub >= 0 && board[elem[M]][nSub] == REACHABLE) {
+        	pathList.push([elem[M], nSub]);
         	added = true;
         }
 
@@ -330,115 +327,115 @@ function getPath(start, end, field) {
 }
 
 /**
- * Checks wether there is a path from the end to the start in the given field.
+ * Checks whether there is a path from the end to the start in the given board.
  * Starting with the end position a list is generated containing positions,
- * that are reachable and whose neighbours should be added to this list.
+ * that are reachable and whose neighbors should be added to this list.
  * A position is removed after marking, resulting in an empty list when all
- * fields where either marked or could not be reached.
- * If the start field is marked after the list is empty the field can be
+ * cells where either marked or could not be reached.
+ * If the start cell is marked after the list is empty the cell can be
  * reached, otherwise it is not reachable.
  *
  * @param {Number} start The start 2D position.
  * @param {Number} end The end 2D position.
- * @param {Array} The field in which to search.
+ * @param {Array} The board in which to search.
  * @return {Boolean} True if path exists false otherwise
  */
-function doesPathExist(start, end, field) {
+function doesPathExist(start, end, board) {
 	% Cleanup: Ensure that there is no leftover data
 	% that could come from earlier calls of this method
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (field[y][x] > EMPTY) {
-                field[y][x] = EMPTY;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            if (board[m][n] > EMPTY) {
+                board[m][n] = EMPTY;
             }
         }
     }
 
-    % Starting from the goal mark all fields to indicate
+    % Starting from the goal mark all cells to indicate
     % whether they can reach it
     var toMarkList = [end];
-    field[end[1]][end[0]] = REACHABLE;
-    field[start[1]][start[0]] = EMPTY;
+    board[end[M]][end[N]] = REACHABLE;
+    board[start[M]][start[N]] = EMPTY;
 
     while (toMarkList.length !== 0) {
   	    var elem = toMarkList.pop();
 
-        % Push neighbours if not marked
-        var xpo = elem[0] + 1;
-        var xmo = elem[0] - 1;
-        var ypo = elem[1] + 1;
-        var ymo = elem[1] - 1;
+        % Push neighbors if not marked
+        var mAdd = elem[M] + 1;
+        var mSub = elem[M] - 1;
+        var nAdd = elem[N] + 1;
+        var nSub = elem[N] - 1;
 
-       	if (ypo < FIELD_HEIGHT && field[ypo][elem[0]] == EMPTY) {
-        	toMarkList.push([elem[0], ypo]);
-            % Mark the field
-            field[ypo][elem[0]] = REACHABLE;
+       	if (mAdd < BOARD_HEIGHT && board[mAdd][elem[N]] == EMPTY) {
+        	toMarkList.push([mAdd, elem[N]]);
+            % Mark the cell
+            board[mAdd][elem[N]] = REACHABLE;
         }
-        if (ymo >= 0 && field[ymo][elem[0]] == EMPTY) {
-        	toMarkList.push([elem[0], ymo]);
-            % Mark the field
-            field[ymo][elem[0]] = REACHABLE;
+        if (mSub >= 0 && board[mSub][elem[N]] == EMPTY) {
+        	toMarkList.push([mSub, elem[N]]);
+            % Mark the cell
+            board[mSub][elem[N]] = REACHABLE;
         }
-        if (xpo < FIELD_WIDTH && field[elem[1]][xpo] == EMPTY) {
-        	toMarkList.push([xpo, elem[1]]);
-            % Mark the field
-            field[elem[1]][xpo] = REACHABLE;
+        if (nAdd < BOARD_WIDTH && board[elem[M]][nAdd] == EMPTY) {
+        	toMarkList.push([elem[M], nAdd]);
+            % Mark the cell
+            board[elem[M]][nAdd] = REACHABLE;
         }
-        if (xmo >= 0 && field[elem[1]][xmo] == EMPTY) {
-        	toMarkList.push([xmo, elem[1]]);
-            % Mark the field
-            field[elem[1]][xmo] = REACHABLE;
+        if (nSub >= 0 && board[elem[M]][nSub] == EMPTY) {
+        	toMarkList.push([elem[M], nSub]);
+            % Mark the cell
+            board[elem[M]][nSub] = REACHABLE;
         }
     }
 
-	% Check the start field if it is marked as reachable
-    return field[start[1]][start[0]] == REACHABLE;
+	% Check the start cell if it is marked as reachable
+    return board[start[M]][start[N]] == REACHABLE;
 }
 
 %%%%%%%%%%%%%
 % Gamelogic %
 %%%%%%%%%%%%%
 /**
- * Reveal the selected field and update the visuals accordingly.
+ * Reveal the selected cell and update the visuals accordingly.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function revealField(x, y) {
+function revealCell(m, n) {
     if (gameover || !play) {
         return;
     }
 
-    % Is field a neighbour of the current or first line
-    if (currentField == -1) {
-        if (y != FIELD_HEIGHT -1) {
+    % Is the cell a neighbor of the current or first line
+    if (currentBoard == -1) {
+        if (m != BOARD_HEIGHT -1) {
             return;
         }
     } else {
-        var diffX = Math.abs(freePath[currentField][0] - x);
-        var diffY = Math.abs(freePath[currentField][1] - y);
-        if (diffX + diffY != 1) {
+        var diffM = Math.abs(freePath[currentBoard][M] - m);
+        var diffN = Math.abs(freePath[currentBoard][N] - n);
+        if (diffM + diffN != 1) {
             return;
         }
     }
 
-    % Test if the selected field is on the path
+    % Test if the selected cell is on the path
     var hit = false;
-    if (freePath[currentField + 1][0] == x && freePath[currentField + 1][1] == y) {
-        complField[y][x] = R_REVEAL;
+    if (freePath[currentBoard + 1][M] == m && freePath[currentBoard + 1][N] == n) {
+        complBoard[m][n] = R_REVEAL;
         hit = true;
-        % Unmark the last neighbourhood
-        if (currentField != -1) {
-            markNeighbors(freePath[currentField][0], freePath[currentField][1], false);
+        % Unmark the last neighborhood
+        if (currentBoard != -1) {
+            markNeighbors(freePath[currentBoard][M], freePath[currentBoard][N], false);
         }
-        % Move to next field
-        currentField++;
-        if (currentField == freePath.length - 1) {
+        % Move to next cell
+        currentBoard++;
+        if (currentBoard == freePath.length - 1) {
             gameover = true;
             printInfoText("Congratulations you found a way across!");
         }
-        % Mark the neighbouring fields that are accessible
-        markNeighbors(x, y, true);
+        % Mark the neighboring cells that are accessible
+        markNeighbors(m, n, true);
     }
 
     % If nothing was hit the game is over
@@ -446,56 +443,56 @@ function revealField(x, y) {
     if (!hit) {
         gameover = true;
         for (var idx = 0; idx < freePath.length; idx++) {
-            complField[freePath[idx][1]][freePath[idx][0]] = 1;
+            complBoard[freePath[idx][M]][freePath[idx][N]] = 1;
         }
-        complField[y][x] = -1;
+        complBoard[m][n] = -1;
         printInfoText("Sadly you died!");
     }
 
-    draw(x, y);
+    draw(m, n);
 }
 
 %%%%%%%%%%%%%%%%%%%%%
 % Draw and coloring %
 %%%%%%%%%%%%%%%%%%%%%
 /**
- * Draw all fields.
+ * Draw all cells.
  */
 function drawAll() {
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            draw(x, y);
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            draw(m, n);
         }
     }
 }
 
 /**
- * Since only one field is updated with each input,
- * only this field needs to be redrawn.
+ * Since only one cell is updated with each input,
+ * only this cell needs to be redrawn.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function draw(x, y) {
-    var field = this.getField("pos" + x + "-" + y);
-    field.delay = true;
-    var value = complField[y][x];
-    % If the field was correctly revealed
+function draw(m, n) {
+    var cell = this.getField("cell" + m + "-" + n);
+    cell.delay = true;
+    var value = complBoard[m][n];
+    % If the cell was correctly revealed
     if (value > HIDDEN) {
-        field.fillColor = COLORS[1];
-        field.borderColor = COLORS[1];
+        cell.fillColor = COLORS[1];
+        cell.borderColor = COLORS[1];
     }
-    % If the field was wrongly revealed
+    % If the cell was wrongly revealed
     else if (value < HIDDEN) {
-        field.fillColor = COLORS[0];
-        field.borderColor = COLORS[0];
+        cell.fillColor = COLORS[0];
+        cell.borderColor = COLORS[0];
     }
     % Not revealed
     else {
-        field.fillColor = color.white;
-        field.borderColor = color.white;
+        cell.fillColor = color.white;
+        cell.borderColor = color.white;
     }
-    field.delay = false;
+    cell.delay = false;
 }
 
 /**
@@ -508,47 +505,47 @@ function drawPath() {
     if (drawPiece >= freePath.length) {
         drawPiece = 0;
         for (var idx = 0; idx < freePath.length; idx++) {
-            complField[freePath[idx][1]][freePath[idx][0]] = HIDDEN;
-            draw(freePath[idx][0], freePath[idx][1]);
+            complBoard[freePath[idx][M]][freePath[idx][N]] = HIDDEN;
+            draw(freePath[idx][M], freePath[idx][N]);
         }
         play = true;
         app.clearInterval(run);
     } else {
         % Redraw and continue
-        complField[freePath[drawPiece][1]][freePath[drawPiece][0]] = R_REVEAL;
-        draw(freePath[drawPiece][0], freePath[drawPiece][1]);
+        complBoard[freePath[drawPiece][M]][freePath[drawPiece][N]] = R_REVEAL;
+        draw(freePath[drawPiece][M], freePath[drawPiece][N]);
 
         drawPiece++;
     }
 }
 
 /**
- * Highlight the neighboring fields of the given position.
+ * Highlight the neighboring cells of the given position.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function markNeighbors(x, y, mark) {
-    % Define the neighbourhood
+function markNeighbors(m, n, mark) {
+    % Define the neighborhood
     var directions = [[-1, 0], [1, 0], [0, 1], [0, -1]]
 
     for (var idx = 0; idx < directions.length; idx++) {
-        var newX = x + directions[idx][0];
-        var newY = y + directions[idx][1];
+        var newM = m + directions[idx][M];
+        var newN = n + directions[idx][N];
 
         % Check for out of bounds
-        if (newX < 0 || newX >= FIELD_WIDTH || newY < 0 || newY >= FIELD_HEIGHT) {
+        if (newM < 0 || newM >= BOARD_HEIGHT || newN < 0 || newN >= BOARD_WIDTH) {
             continue;
         }
 
-        field = this.getField("pos" + newX + "-" + newY);
-        field.delay = true;
+        var cell = this.getField("cell" + newM + "-" + newN);
+        cell.delay = true;
         if (mark) {
-            field.borderColor = COLORS[2];
+            cell.borderColor = COLORS[2];
         } else {
-            field.borderColor = color.white;
+            cell.borderColor = color.white;
         }
-        field.delay = false;
+        cell.delay = false;
     }
 }
 
@@ -564,10 +561,10 @@ function printInfoText(text) {
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
@@ -580,7 +577,7 @@ function printInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -588,53 +585,64 @@ function printInfoText(text) {
             \end{flushright}%
         \end{multicols}
 
-        % Calculate the max width and height of a block
-        \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
-        \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
+        % Dynamically adjust the cell width and height to the number of cells
+        % Calculate the max width and height of a cell
+        \FPeval{\resultW}{\boardWidth * 3 - 2} % chktex 8
+        \def\cellWidth{\dimexpr (\linewidth-\resultW pt)/\boardWidth \relax}
 
-        \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
+        \FPeval{\resultH}{\boardHeight * 3 + 3}
+        \def\cellHeight{\dimexpr (0.591\paperheight -\resultH pt)/\boardHeight \relax}
 
-        % Define the blocksize via the smaller amount
-        \ifnum\blocksizeW<\blocksizeH
-            \def\blocksize{\blocksizeW}
-        \else
-            \def\blocksize{\blocksizeH}
-        \fi
-
-        \begin{tcolorbox}
-            \centering%
-            \includegraphics[width=0.25\textwidth]{end}
+        \begin{tcolorbox}[boxsep=0pt,left=1pt,right=1pt,top=1pt,bottom=1pt]
+            % Define the cellsize via the smaller amount
+            % Must be done here so the \linewidth has the correct value
+            \ifdim\cellWidth<\cellHeight
+                \def\cellsize{\cellWidth}
+            \else
+                \def\cellsize{\cellHeight}
+            \fi
             %
+            \setlength{\topsep}{0pt}
+            \setlength{\parindent}{0pt}
             \begin{flushright}
-                \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
-                    \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
-                        \TextField[width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1-#2, readonly=true%
-                        ]{}\hspace{3pt}%
-                    }\vspace{3pt}%
-                    \newline%
+                \includegraphics[height=0.1\paperheight]{evilsnowman-bubble.pdf}
+            \end{flushright}
+            \begin{center}
+                \tiny
+                %
+                \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
+                    \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
+                        \TextField[
+                            name=cell#1-#2, width=\cellsize, height=\cellsize,%
+                            bordercolor=white, readonly%
+                        ]{}%
+                        \xintifForLast{}{\hspace{3pt}}%
+                    }\vspace{3pt}\\[-1pt]%
                 }%
-            \end{flushright}%
-            %
-            \centering%
-            \includegraphics[width=0.25\textwidth]{start}
-            \TextField[bordercolor=white, width=0.0cm, name=tooltiptxt, readonly=true]{}
+            \end{center}%
+            \begin{flushleft}
+                \includegraphics[height=0.1\paperheight]{mini-dragon-bubble.pdf}
+            \end{flushleft}
         \end{tcolorbox}
 
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=restart, bordercolor=white]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart game\strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, width=\linewidth, readonly=true]{}
+                    \TextField[name=info, width=\linewidth,
+                        bordercolor=, backgroundcolor=, readonly]{}
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
+
+        \TextField[
+            name=tooltiptxt, bordercolor=, backgroundcolor=gray, readonly, hidden, height=0cm
+        ]{}
 
     \end{Form}
 
