--- a/src/maumau.tex
+++ b/src/maumau.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper, footexclude, headexclude]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
@@ -19,13 +19,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Max value is 52, other values are possible but they should not be below playercount * cardcount
 \def\cards{32}
+% Needs to be 4
 \def\colors{4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{insDLJS}[]{JSDateiname}{Maumau}
+\begin{insDLJS}[]{JSDateiname}{maumau}
 
 const GAME_DESC = "Mau mau is a simple card game.\
 The goal of each player is to get rid of all his or her cards.\
@@ -95,9 +97,9 @@ var cardAnim = {
 }
 % Saves the index of the currently used card
 var curCardIdx = -1;
-% The playercount is read from the gui
+% The playercount is read from the GUI
 var playerCount = 0;
-% The cards per player is read from the gui
+% The cards per player is read from the GUI
 var cardsPerPlayer = 0;
 % Saves which turn it is
 var curPlayer = 0;
@@ -128,12 +130,17 @@ const CARD_COLORS = [
     String.fromCharCode(0x2666)
 ];
 
-const CARD_VALUES = ["7", "8", "9", "10", "J", "Q", "K", "A"];
+const CARD_VALUES = ["2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"];
 % A list of all cards, each being a combination of card color and value
-const CARDS = [];
-for (var col = 0; col < CARD_COLORS.length; col++) {
-    for (var val = 0; val < CARD_VALUES.length; val++) {
-        CARDS.push(CARD_VALUES[val] + CARD_COLORS[col]);
+var CARDS = [];
+for (var val = CARD_VALUES.length - 1; val >= 0; val--) {
+    for (var col = 0; col < CARD_COLORS.length; col++) {
+        if (CARDS.length < CARD_COUNT) {
+            CARDS.push(CARD_VALUES[val] + CARD_COLORS[col]);
+        } else {
+            col = CARD_COLORS.length;
+            val = 0;
+        }
     }
 }
 
@@ -172,22 +179,22 @@ const BACK_COLOR = [ "RGB", 0.047, 0.349, 0.047 ];
 % Helper %
 %%%%%%%%%%
 /**
- * Returns a random integer between 0 and the param.
- * @param {Number} max The upperbound.
+ * Returns a random integer between 0 and the parameter.
+ * @param {Number} max The upper bound.
  */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Initialisation and Restart %
+% Initialization and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 /**
- * Initialise the default game state.
+ * Initialize the default game state.
  */
-function initialise() {
-    % Init the GUI
-    initialiseButtons();
+function initialize() {
+    % Initialize the GUI
+    initializeButtons();
 
     % Push all cards to the graveyard
     for (var i = 0; i < CARD_COUNT; i++) {
@@ -207,14 +214,14 @@ function initialise() {
 }
 
 /**
- * Initialise all buttons from the GUI.
+ * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct colors.
  */
-function initialiseButtons() {
+function initializeButtons() {
     % Disables the rectangle around a button after the click
     app.focusRect = false;
 
-    % Read player count from gui
+    % Read player count from GUI
     var cmP = this.getField("cmPlayer");
     cmP.checkThisBox(2);
     playerCount = 0;
@@ -222,7 +229,7 @@ function initialiseButtons() {
         playerCount += cmP.isBoxChecked(i) * (2 + i);
     };
 
-    % Read cards per player count from gui
+    % Read cards per player count from GUI
     var cmC = this.getField("cmCards");
     cmC.checkThisBox(1);
     for (var i = 0; i < 5; i++) {
@@ -235,12 +242,11 @@ function initialiseButtons() {
         var card = this.getField("card" + c);
         card.delay = true;
         card.setAction("MouseUp", callbackName);
-        if (c >= CARDS.length * 0.5) {
+        if (c \% 4 > 1) {
             card.textColor = color.red;
         }
         card.textFont = font.Cour;
         card.textSize = TEXT_SIZE_MED;
-        card.alignment = "center";
         card.delay = false;
     }
 
@@ -274,7 +280,7 @@ function initialiseButtons() {
             colorRect, CARD_COLORS[col], true, TEXT_SIZE_BIG);
     }
 
-    % Copy rules to the gui by iterating all keys of the rules object
+    % Copy rules to the GUI by iterating all keys of the rules object
     var cbKeys = Object.keys(rules);
     for (var idx = 0; idx < cbKeys.length; idx++) {
         if (rules[cbKeys[idx]] == true) {
@@ -283,12 +289,8 @@ function initialiseButtons() {
         }
     }
 
-    % Assign each button the coresponding function and disable the highlights
+    % Assign each button the corresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
-
-    % Info field setup
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
 
     % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
@@ -298,7 +300,7 @@ function initialiseButtons() {
 }
 
 /**
- * Restart the game and clear everything
+ * Restart the game and clear everything.
  */
 function restart() {
     % While an animation is running disable restart
@@ -344,21 +346,21 @@ function restart() {
         card.hidden = true;
     }
 
-    % Read player count from gui
+    % Read player count from GUI
     var cmP = this.getField("cmPlayer");
     playerCount = 0;
     for (var i = 0; i < 3; i++) {
         playerCount += cmP.isBoxChecked(i) * (2 + i);
     };
 
-    % Read cards per player count from gui
+    % Read cards per player count from GUI
     cardsPerPlayer = 0;
     var cmC = this.getField("cmCards");
     for (var i = 0; i < 5; i++) {
         cardsPerPlayer += cmC.isBoxChecked(i) * (4 + i);
     };
 
-    % Get rules from gui by iterating all keys of the rules object
+    % Get rules from GUI by iterating all keys of the rules object
     var cbKeys = Object.keys(rules);
     for (var idx = 0; idx < cbKeys.length; idx++) {
         var cb = this.getField(cbKeys[idx]);
@@ -378,9 +380,9 @@ function restart() {
 }
 
 /**
- * Enable or disable the tooltip
+ * Enable or disable the tooltip.
  *
- * @param {Boolean} on Enable or disable tooltip
+ * @param {Boolean} on Enable or disable tooltip.
  */
 function tooltip(on) {
     if (on) {
@@ -393,10 +395,11 @@ function tooltip(on) {
 
         field.multiline = true;
         field.textSize = 16;
-        field.fillColor = color.gray;
         % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
         field.rect = [128, 601, 468, 401];
+
+        this.getField("tooltiptxt").setFocus();
 
         field.delay = false;
     } else {
@@ -404,12 +407,6 @@ function tooltip(on) {
         var field = this.getField("tooltiptxt");
         field.delay = true;
         field.hidden = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
         field.delay = false;
     }
 }
@@ -431,6 +428,11 @@ function chooseCard(cardIdx) {
 
     if (gameState.gameover) {
         printInfoText("Game is over or the new Game is not ready yet.");
+        return;
+    }
+
+    if (cardAnim.state > -0.1) {
+        printInfoText("Whait for the animation to finish.");
         return;
     }
 
@@ -459,7 +461,12 @@ function chooseCard(cardIdx) {
         % Remove card from stack
         stack.splice(0, 1);
 
-        printInfoText("Player " + (curPlayer + 1) + " took a card!");
+        if (gameState.take > 0) {
+            printInfoText("Player " + (curPlayer + 1) + " took a card! " +
+                gameState.take + " cards left.");
+        } else {
+            printInfoText("Player " + (curPlayer + 1) + " took a card!");
+        }
         % Check for special rules (for example take 2)
         specialRulesDraw();
     }
@@ -526,10 +533,11 @@ function chooseCard(cardIdx) {
 
     % Reshuffle cards from the graveyard to the stack if there are any and the stack is empty
     if (stack.length <= 0 && graveyard.length > 1) {
-        for (var i = 0; i < graveyard.length - 1; i++) {
+        var startLen = graveyard.length - 1;
+        for (var i = 0; i < startLen; i++) {
             var rnd = getRandomInt(graveyard.length - 1);
             stack.push(graveyard[rnd]);
-            cardOwner[graveyard[i]] = STACK;
+            cardOwner[graveyard[rnd]] = STACK;
             graveyard.splice(rnd, 1);
         }
         curCardIdx = stack.length - 1;
@@ -585,7 +593,7 @@ function skip() {
         printInfoText("Player " + (curPlayer + 1) + " was skipped.");
         nextPlayer();
         showCurHidePrev();
-        % Disable skipping for the eight ontop of the graveyard,
+        % Disable skipping for the eight on top of the graveyard,
         % otherwise following player could all skip until another card is played
         gameState.skip8 = false;
     } else if (stack.length == 0) {
@@ -638,22 +646,20 @@ function specialRulesBegin(cardIdx) {
 
     % If a take card was played
     if (gameState.take > 0) {
-        % If chaining is allowed, check if correct card was played
-        % and the player has not already started drawing cards
-        if (rules.cb7chain && !gameState.taking && pC.charAt(0) == "7" && gC.charAt(0) == "7" ||
-            rules.cbKchain && !gameState.taking && pC.charAt(0) == "K" && gC.charAt(0) == "K"
-        ) {
+        if (cardOwner[cardIdx] == STACK) {
+            gameState.take--;
+            gameState.taking = true;
             return true;
-        }
-        % If chaining is disabled, or the card is not valid the player needs to draw
-        else {
-            if (cardOwner[cardIdx] == STACK) {
-                gameState.take--;
-                gameState.taking = true;
-                printInfoText("Player " + (curPlayer + 1) + " took a card! " +
-                    gameState.take + " cards left.");
+        } else {
+            % If chaining is allowed, check if correct card was played
+            % and the player has not already started drawing cards
+            if ((rules.cb7chain && !gameState.taking && pC.charAt(0) == "7" && gC.charAt(0) == "7") ||
+                (rules.cbKchain && !gameState.taking && pC.charAt(0) == "K" && gC.charAt(0) == "K")
+            ) {
                 return true;
-            } else {
+            }
+            % If chaining is disabled, or the card is not valid the player needs to draw
+            else {
                 printInfoText("Player " + (curPlayer + 1) + " you still have " +
                     gameState.take + " cards to draw!");
                 return false;
@@ -696,7 +702,7 @@ function specialRulesDraw() {
  * Adjusting take count after 7 or K.
  * Mark next turn as skipped after 8 or A.
  * Change playing direction after 10.
- * Show color selection gui after J.
+ * Show color selection GUI after J.
  * Player gets another turn after A.
  *
  * @param {Number} cardIdx The selected card.
@@ -750,7 +756,7 @@ function specialRulesPlay(cardIdx) {
     }
     % Get another turn when played an ass
     else if (rules.cbAcard && c.charAt(0) == "A") {
-        printInfoText("Player " + (curPlayer + 1) + " has played an ass and must play another card.");
+        printInfoText("Player "+(curPlayer + 1)+" has played an ass and must play another card.");
         prevPlayer();
     }
 }
@@ -912,7 +918,7 @@ function showCurHidePrev() {
  * Updates the card positions of the selected player.
  * This is used after drawing or playing a card, since then
  * the area for each card changes and they need to be re-positioned.
- * The area for each card is dependent on the cardamount and the complete areawidth.
+ * The area for each card is dependent on the number of cards and the complete area width.
  *
  * @param {Number} pIdx The player index.
  */
@@ -959,8 +965,8 @@ function redrawPlayerCards(pIdx) {
 
 /**
  * Drawmode for the front side. In reality the textelements do not have
- * multiple sides therefore two states are needed in which the visualisation changes.
- * The frontside changes the color to white, rotates the field if necessary and
+ * multiple sides therefore two states are needed in which the visualization changes.
+ * The frontside changes the color to white, rotates the card if necessary and
  * add the value of the selected card.
  *
  * @param {Number} cardIdx The selected card.
@@ -976,7 +982,7 @@ function drawCardFront(cardIdx) {
 
 /**
  * Drawmode for the back side. In reality the textelements do not have
- * multiple sides therefore two states are needed in which the visualisation changes.
+ * multiple sides therefore two states are needed in which the visualization changes.
  * The backside changes the color and removes the value.
  *
  * @param {Number} cardIdx The selected card.
@@ -1019,7 +1025,7 @@ function moveCard() {
 
 /**
  * Utility function.
- * Adds a button to the gui using the given parameter.
+ * Adds a button to the GUI using the given parameter.
  * @param {String} name The field name.
  * @param {String} callback The function called on mouseup.
  * @param {Array} rect The field position.
@@ -1034,7 +1040,6 @@ function addButton(name, callback, rect, value, hidden, tsize) {
     btn.rect = rect;
     btn.textFont = font.Cour;
     btn.textSize = tsize;
-    btn.alignment = "center";
     btn.value = value;
     btn.hidden = hidden;
     btn.delay = false;
@@ -1052,10 +1057,10 @@ function printInfoText(text) {
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
@@ -1068,7 +1073,7 @@ function printInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -1080,24 +1085,24 @@ function printInfoText(text) {
             % The playing cards
             \xintFor* #1 in {\xintSeq{0}{\cards-1}} \do {%
                 \TextField[name=card#1, width=1cm, height=1cm,%
-                    bordercolor=black, backgroundcolor=white, readonly=true, hidden%
+                    bordercolor=black, backgroundcolor=white, align=1, readonly, hidden%
                 ]{}%
             }%
 
             % Field to show the currently active color
             \TextField[name=curcolor, width=1cm, height=1cm,%
-                bordercolor=, backgroundcolor=, readonly=true, hidden]{}%
+                bordercolor=, backgroundcolor=, align=1, readonly, hidden]{}%
             % Skip button to skip a turn
             \TextField[name=skip, width=1cm, height=1cm,%
-                bordercolor=black, backgroundcolor=white, readonly=true, hidden]{}%
+                bordercolor=black, backgroundcolor=white, align=1, readonly, hidden]{}%
             % For each color a button to allow for color selection
             \xintFor* #1 in {\xintSeq{0}{\colors-1}} \do {%
                 \TextField[name=color#1, width=1cm, height=1cm,%
-                    bordercolor=black, backgroundcolor=white, readonly=true, hidden%
+                    bordercolor=black, backgroundcolor=white, align=1, readonly, hidden%
                 ]{}%
             }%
 
-            \TextField[bordercolor=white, name=tooltiptxt, readonly=true, hidden]{}
+            \TextField[name=tooltiptxt, bordercolor=, backgroundcolor=gray, readonly, hidden]{}
         \end{tcolorbox}
 
         %%%%%%%%%%%%%%%%%%%%%%%
@@ -1121,14 +1126,15 @@ function printInfoText(text) {
         \begin{center}
             % Game related buttons
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=restart, bordercolor=white, borderwidth=0]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart game\strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, width=\linewidth, readonly=true]{}
+                    \TextField[name=info, width=\linewidth,
+                        bordercolor=, backgroundcolor=, readonly]{}
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
@@ -1141,7 +1147,7 @@ function printInfoText(text) {
         \ChoiceMenu[name=cmCards, bordercolor=gray, radiosymbol=5, radio]
             {Player card count: }{4, 5, 6, 7, 8}
 
-        % Gui options for special rules like, take 2, skip, choose color, ...
+        % GUI options for special rules like, take 2, skip, choose color, ...
         \begin{center}
             \begin{tabularx}{\textwidth}{@{} X X @{}}
                 \CheckBox[name=cb7, bordercolor=gray, checkboxsymbol=5]{7: take 2} &%
@@ -1159,7 +1165,8 @@ function printInfoText(text) {
                 \CheckBox[name=cbK, bordercolor=gray, checkboxsymbol=5]{King: take 4} &%
                 \CheckBox[name=cbKchain, bordercolor=gray, checkboxsymbol=5]{King: chaining}
                 \\%
-                \CheckBox[name=cbAcard, bordercolor=gray, checkboxsymbol=5]{Ace: play another card} &%
+                \CheckBox[name=cbAcard, bordercolor=gray, checkboxsymbol=5]
+                    {Ace: play another card} &%
                 \CheckBox[name=cbAskip, bordercolor=gray, checkboxsymbol=5]{Ace: skip player}
                 %
             \end{tabularx}
