--- a/src/memory.tex
+++ b/src/memory.tex
@@ -1,12 +1,10 @@
-\documentclass[12pt, a4paper, footexclude, headexclude]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage[ngerman]{babel}
-\usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
 \usepackage{multicol}
 
@@ -22,42 +20,43 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Values can be changed
 % Obacht: width * height needs to be an even number
-\def\fieldWidth{6}
-\def\fieldHeight{6}
+\def\boardWidth{6}
+\def\boardHeight{6}
 
-% Max playercount is 5
-\def\playerCount{3}
+\def\playerCount{5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{insDLJS}[]{JSDateiname}{Memory}
+\begin{insDLJS}[]{JSDateiname}{memory}
 
 const GAME_DESC = "In this game multiple player compete to collect the most pairs.\
 Each pair contains two cards with the same symbol on it. At the beginning all\
 cards are hidden and each player can reveal two of them when it is their turn.\
 After the reveal both are hidden again if they do not match or they are removed if they do.\
-In that case the reveiling player gets another turn.";
+In that case the reveling player gets another turn.";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
-const SCREEN_TEXT_WIDTH = 300;
+const BOARD_WIDTH = AFMakeNumber(\boardWidth);
+const BOARD_HEIGHT = AFMakeNumber(\boardHeight);
+const SCREEN_TEXT_SIZE = 300;
 const MAX_PLAYERS = AFMakeNumber(\playerCount);
-const MAX_PAIRS = (FIELD_WIDTH * FIELD_HEIGHT) / 2;
+const MAX_PAIRS = (BOARD_WIDTH * BOARD_HEIGHT) / 2;
 
 % Constants
-% -
+const M = 0;
+const N = 1;
 
 % Globals
-% The game field array
-var complField = new Array();
+% The game board array
+var complBoard = new Array();
 % Lock if the game has ended
 var gameover = false;
 var playerIdx = 1;
-var lastField = false;
-var beforeLastField = false;
+var lastCell = false;
+var beforeLastCell = false;
 var pairsFound = 0;
 var playerPoints = [];
 
@@ -87,81 +86,81 @@ const MEMORY_SYMBOLS = [
 % Helper %
 %%%%%%%%%%
 /**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
+ * Returns a random number between 0 and the parameter.
+ * @param {Number} max The upper bound
  */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Initialisation and Restart %
+% Initialization and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 /**
- * Initialise the default game state.
+ * Initialize the default game state.
  */
-function initialise() {
+function initialize() {
     % Create an array that contains all symbols twice
     var symbols = [];
     for (var i = 0; i < MAX_PAIRS; i++) {
-        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i]));
-        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i]));
+        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i \% MEMORY_SYMBOLS.length]));
+        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i \% MEMORY_SYMBOLS.length]));
     }
 
-    % Create the field by removing one element for each slot
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
-        var tmp = new Array();
-        for (var column = 0; column < FIELD_WIDTH; column++) {
+    % Create the board by removing one element for each cell
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        var row = new Array();
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             var rnd = getRandomInt(symbols.length);
             var elem = symbols[rnd];
             symbols.splice(rnd, 1);
-            % UTF8 symbol and is the field removed
-            tmp.push([elem, false]);
+            % UTF8 symbol and is the cell removed
+            row.push([elem, false]);
         }
-        complField.push(tmp);
+        complBoard.push(row);
     }
 
-    for (var i = 0; i < MAX_PLAYERS; i++) {
+    for (var p = 0; p < MAX_PLAYERS; p++) {
         playerPoints.push(0);
+        updatePointsGUI(p);
     }
 
-    % Init the GUI
-    initialiseButtons();
+    % Initialize the GUI
+    initializeButtons();
 }
 
 /**
- * Initialise all buttons from the GUI.
+ * Initialize all buttons from the GUI.
  * For example add callbacks.
  */
-function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
+function initializeButtons() {
+    % Disables the rectangle around a button after the click
+    app.focusRect = false;
+
+    % Assign each button the corresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
-    this.getField("restart").highlight="none";
 
     var funcName = "revealField";
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
-            this.getField("pos" + x + "-" + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
-            this.getField("pos" + x + "-" + y).alignment = "center";
+    var cell;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            var callbackName = funcName + "(" + m.toString() + "," + n.toString() + ");";
+            cell = this.getField("cell" + m + "-" + n);
+            cell.setAction("MouseDown", callbackName);
+            cell.textSize = SCREEN_TEXT_SIZE / Math.max(BOARD_HEIGHT, BOARD_WIDTH);
+            cell.borderColor = color.black;
         }
     }
-
-    % Info field setup
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
 
     % Tooltip button setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
-    this.getField("tooltipbtn").highlight="none";
 
     printInfoText("Your Turn: Player " + playerIdx);
 }
 
 /**
- * Restarts the game by clearing the field array and redistributing cards.
+ * Restarts the game by clearing the board array and redistributing cards.
  * Resets playerpoints and gamevars.
  */
 function restart() {
@@ -172,29 +171,32 @@ function restart() {
         symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i]));
     }
 
-    % Create the field by removing one element for each slot
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
+    % Create the board by removing one element for each cell
+    var cell;
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             var rnd = getRandomInt(symbols.length);
             var elem = symbols[rnd];
             symbols.splice(rnd, 1);
-            complField[y][x] = [elem, false];
+            complBoard[m][n] = [elem, false];
 
-            var field = this.getField("pos" + x + "-" + y);
-            field.delay = true;
-            field.value = "";
-            field.borderColor = color.white;
-            field.delay = false;
+            cell = this.getField("cell" + m + "-" + n);
+            cell.delay = true;
+            cell.value = "";
+            cell.borderColor = color.black;
+            cell.hidden = false;
+            cell.delay = false;
         }
     }
 
-    for (var i = 0; i < MAX_PLAYERS; i++) {
-        playerPoints[i] = 0;
+    for (var p = 0; p < MAX_PLAYERS; p++) {
+        playerPoints[p] = 0;
+        updatePointsGUI(p);
     }
 
-    % Reset field marking
-    beforeLastField = false;
-    lastField = false;
+    % Reset cell marking
+    beforeLastCell = false;
+    lastCell = false;
 
     gameover = false;
     pairsFound = 0;
@@ -204,9 +206,9 @@ function restart() {
 }
 
 /**
- * Enable or disable the tooltip
+ * Enable or disable the tooltip.
  *
- * @param {Boolean} on Enable or disable tooltip
+ * @param {Boolean} on Enable or disable tooltip.
  */
 function tooltip(on) {
     if (on) {
@@ -214,26 +216,23 @@ function tooltip(on) {
         % and adjust the size so the text can be displayed
         var field = this.getField("tooltiptxt");
         field.delay = true;
+        field.hidden = false;
         field.value = GAME_DESC;
 
         field.multiline = true;
         field.textSize = 16;
-        field.fillColor = color.gray;
-        % hight 842, width 596
+        % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
-        field.rect = [128, 581, 468, 381];
+        field.rect = [128, 601, 468, 401];
+
+        this.getField("tooltiptxt").setFocus();
 
         field.delay = false;
     } else {
         % Remove the field such that it is not visible
         var field = this.getField("tooltiptxt");
         field.delay = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
+        field.hidden = true;
         field.delay = false;
     }
 }
@@ -243,13 +242,13 @@ function tooltip(on) {
 %%%%%%%%%%%%%
 /**
  * Reveal the card at the given coordinates.
- * If already two fields are revealed, they are either hidden or removed.
- * Does not do anything if field is already revealed.
+ * If already two cells are revealed, they are either hidden or removed.
+ * Does not do anything if cell is already revealed.
  *
- * @param {Number} x The x coordinate.
- * @param {Number} y The y coordinate.
+ * @param {Number} m The m coordinate.
+ * @param {Number} n The n coordinate.
  */
-function revealField(x, y) {
+function revealField(m, n) {
     % This removes the cursor and fixes minor bugs
     this.getField("restart").setFocus();
 
@@ -257,21 +256,21 @@ function revealField(x, y) {
         return;
     }
 
-    % If there are two fields selected either hide or remove them
-    if (beforeLastField != false && lastField != false) {
+    % If there are two cells selected either hide or remove them
+    if (beforeLastCell != false && lastCell != false) {
 
         % Test if symbols match
-        var match = complField[lastField[1]][lastField[0]][0] ==
-            complField[beforeLastField[1]][beforeLastField[0]][0];
+        var match = complBoard[lastCell[M]][lastCell[N]][0] ==
+            complBoard[beforeLastCell[M]][beforeLastCell[N]][0];
         if (match) {
             % Remove both symbols
-            remove(lastField[0], lastField[1]);
-            remove(beforeLastField[0], beforeLastField[1]);
+            remove(lastCell[M], lastCell[N]);
+            remove(beforeLastCell[M], beforeLastCell[N]);
 
-            complField[lastField[1]][lastField[0]][1] = true;
-            complField[beforeLastField[1]][beforeLastField[0]][1] = true;
+            complBoard[lastCell[M]][lastCell[N]][1] = true;
+            complBoard[beforeLastCell[M]][beforeLastCell[N]][1] = true;
 
-            % Check if field is full or pairs left
+            % Check if cell is full or pairs left
             if (++pairsFound == MAX_PAIRS) {
                 gameover = true;
                 % Print game is over
@@ -279,28 +278,28 @@ function revealField(x, y) {
             }
         } else {
             % Hide both symbols
-            draw(lastField[0], lastField[1], "");
-            draw(beforeLastField[0], beforeLastField[1], "");
+            draw(lastCell[M], lastCell[N], "");
+            draw(beforeLastCell[M], beforeLastCell[N], "");
         }
-        beforeLastField = false;
-        lastField = false;
+        beforeLastCell = false;
+        lastCell = false;
 
         return;
     }
 
-    if (complField[y][x][1]) {
+    if (complBoard[m][n][1]) {
         return;
     }
 
-    % If one field is selected allow for a second one
-    if (lastField != false && (lastField[0] != x || lastField[1] != y)) {
+    % If one cell is selected allow for a second one
+    if (lastCell != false && (lastCell[M] != m || lastCell[N] != n)) {
         % Save both selections
-        beforeLastField = lastField;
-        lastField = [x, y];
+        beforeLastCell = lastCell;
+        lastCell = [m, n];
 
         % Test if symbols match
-        var match = complField[lastField[1]][lastField[0]][0] ==
-            complField[beforeLastField[1]][beforeLastField[0]][0];
+        var match = complBoard[lastCell[M]][lastCell[N]][0] ==
+            complBoard[beforeLastCell[M]][beforeLastCell[N]][0];
         if (!match) {
             % Advance player
             playerIdx++;
@@ -309,14 +308,15 @@ function revealField(x, y) {
             }
         } else {
             playerPoints[playerIdx - 1]++;
+            updatePointsGUI(playerIdx - 1);
         }
-        % Print whos turn it is
+        % Print who's turn it is
         printInfoText("Your Turn: Player " + playerIdx);
     } else {
-        lastField = [x, y];
+        lastCell = [m, n];
     }
 
-    draw(x, y, complField[y][x][0]);
+    draw(m, n, complBoard[m][n][0]);
 }
 
 %%%%%%%%%%%%%%%%%%%%%
@@ -325,28 +325,38 @@ function revealField(x, y) {
 /**
  * Redraw the given position using the given value.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  * @param {String} value The text value.
  */
-function draw(x, y, value) {
-    var field = this.getField("pos" + x + "-" + y);
-    field.delay = true;
-    field.value = value;
-    field.delay = false;
+function draw(m, n, value) {
+    var cell = this.getField("cell" + m + "-" + n);
+    cell.delay = true;
+    cell.value = value;
+    cell.delay = false;
 }
 
 /**
  * Remove the value at the given position.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function remove(x, y) {
-    var field = this.getField("pos" + x + "-" + y);
+function remove(m, n) {
+    var cell = this.getField("cell" + m + "-" + n);
+    cell.delay = true;
+    cell.hidden = true;
+    cell.delay = false;
+}
+
+/**
+ * Update the GUI points for the given player.
+ * @param idx {Number} The player index.
+ */
+function updatePointsGUI(idx) {
+    var field = this.getField("points" + (idx + 1));
     field.delay = true;
-    field.value = "";
-    field.borderColor = color.black;
+    field.value = playerPoints[idx];
     field.delay = false;
 }
 
@@ -360,24 +370,14 @@ function printInfoText(text) {
     field.delay = true;
     field.value = text;
     field.delay = false;
-
-    % Refresh the current points
-    var field = this.getField("pointtable");
-    field.delay = true;
-    var string = "";
-    for (var i = 0; i < MAX_PLAYERS; i++) {
-        string += "Player " + (i + 1) + " has " + playerPoints[i] + " Points.\n";
-    }
-    field.value = string;
-    field.delay = false;
 }
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
@@ -390,7 +390,7 @@ function printInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -398,51 +398,82 @@ function printInfoText(text) {
             \end{flushright}%
         \end{multicols}
 
-        % Calculate the max width and height of a block
-        \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
-        \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
+        % Dynamically adjust the cell width and height to the number of cells
+        % Calculate the max width and height of a cell
+        \FPeval{\resultW}{\boardWidth * 3 - 2} % chktex 8
+        \def\cellWidth{\dimexpr (\linewidth-\resultW pt)/\boardWidth \relax}
 
-        \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
+        \FPeval{\resultH}{\boardHeight * 3 + 3}
+        \def\cellHeight{\dimexpr (0.591\paperheight -\resultH pt)/\boardHeight \relax}
 
-        % Define the blocksize via the smaller amount
-        \ifnum\blocksizeW<\blocksizeH
-            \def\blocksize{\blocksizeW}
-        \else
-            \def\blocksize{\blocksizeH}
-        \fi
-
-        % The gamefield
+        % The game board
         \begin{tcolorbox}
-            \begin{flushright}
-                \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
-                    \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
+            % Define the cell size via the smaller amount
+            % Must be done here so the \linewidth has the correct value
+            \ifdim\cellWidth<\cellHeight
+                \def\cellsize{\cellWidth}
+            \else
+                \def\cellsize{\cellHeight}
+            \fi
+
+            \begin{center}
+                \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
+                    \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[%
-                            width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1-#2, readonly=true]{}\hspace{3pt}%
-                    }\vspace{3pt}
-                    \newline%
+                            name=cell#1-#2, width=\cellsize, height=\cellsize,%
+                            bordercolor=white, align=1, readonly%
+                        ]{}%
+                        \xintifForLast{}{\hspace{3pt}}%
+                    }\vspace{3pt}\\[-1pt]%
                 }%
-            \end{flushright}%
+            \end{center}%
         \end{tcolorbox}
 
+        % Point table
+        \begin{center}
+            % Player selection buttons
+            \begin{tabularx}{\textwidth}{@{} *{\playerCount}{X} @{}}%
+                \xintFor* #1 in {\xintSeq{1}{\playerCount}} \do {%
+                    \begin{tcolorbox}[left=0pt, right=0pt, halign=center]
+                        \ifdim\linewidth>30pt
+                            P%
+                        \fi%
+                        \ifdim\linewidth>50pt
+                            layer%
+                        \fi%
+                        \ifdim\linewidth>35pt
+                            \(\;\)%
+                        \fi%
+                        \ifdim\linewidth>20pt
+                        #1:%
+                        \fi%
+                        \TextField[name=points#1, width=0.4cm, height=0.35cm,
+                            bordercolor=, backgroundcolor=, align=1, readonly]{}
+                    \end{tcolorbox}
+                    % Have the cell divider for all elements
+                    % that are not the last one
+                    \xintifForLast{}{&}
+                }%
+            \end{tabularx}
+        \end{center}
+        \vspace{-1cm}
         % Game related buttons
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=restart, bordercolor=white]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart game\strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, width=\linewidth, readonly=true]{}
+                    \TextField[name=info, width=\linewidth,
+                        bordercolor=, backgroundcolor=, readonly]{}
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
-
-        \TextField[bordercolor=black, name=pointtable, readonly=true, multiline=true]{}
-        \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
+        %
+        \TextField[name=tooltiptxt, bordercolor=, backgroundcolor=gray, readonly, hidden]{}
 
     \end{Form}
 \end{document}
