--- a/src/set.tex
+++ b/src/set.tex
@@ -1,12 +1,10 @@
-\documentclass[12pt, a4paper, footexclude, headexclude]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage[ngerman]{babel}
-\usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
 \usepackage{multicol}
 
@@ -22,18 +20,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Obacht: It is discuraged to use a field with size bigger than 15x15 since the pdf might get
+% Obacht: It is discouraged to use a board with size bigger than 15x15 since the PDF might get
 % to slow to play
-\def\fieldWidth{4}
-\def\fieldHeight{3}
+\def\boardWidth{4}
+\def\boardHeight{3}
 
-% Max playercount is 5
 \def\playerCount{5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{insDLJS}[]{JSDateiname}{Set}
+\begin{insDLJS}[]{JSDateiname}{set}
 
 const GAME_DESC = "In this game you are shown a selection from 81 cards with symbols on them.\
 It is your job to find a so called set, containing three cards, where each attribute\
@@ -41,17 +38,21 @@ is either the same or for each card different. Example: You may find a set,\
 where the symbol is the same but color and appearance differ.";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
-const SCREEN_TEXT_HEIGHT = 500;
+const BOARD_WIDTH = AFMakeNumber(\boardWidth);
+const BOARD_HEIGHT = AFMakeNumber(\boardHeight);
+const SCREEN_TEXT_HEIGHT = 400;
 const MAX_PLAYERS = AFMakeNumber(\playerCount);
 
 const APPEARANCES = 3;
-% The count of symbols on the field
+% The count of symbols on the board
 const NUMBER = 3;
 const SYMB_COUNT = 5;
 
 % Constants
+const M = 0;
+const N = 1;
+const EMPTY = -1;
+
 const ITALIC = 0;
 const UNDERLINE = 1;
 const BOLD = 2;
@@ -61,12 +62,12 @@ const APP_P = 2;
 const NUM_P = 3;
 
 % Globals
-% The game field
-var complField = new Array();
+% The game board
+var complBoard = new Array();
 % Lock if the game has ended
 var gameover = false;
 % Save player idx so for points
-var playerIdx = -1;
+var playerIdx = EMPTY;
 % Save the points
 var points = [];
 % Save the last moves for set checking
@@ -79,7 +80,7 @@ var unusedCards = new Array();
 
 % Symbol array
 % Sadly special symbols using String.fromCharCode() does not work
-% because they cant be visualised in italic/bold
+% because they cant be visualized in italic/bold
 const SYMBOLS = [
     "A",
     "B",
@@ -97,21 +98,21 @@ const COLORS = new Array(
 % Helper %
 %%%%%%%%%%
 /**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
+ * Returns a random number between 0 and the parameter.
+ * @param {Number} max The upper bound
  */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Initialisation and Restart %
+% Initialization and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 /**
- * Initialise the default game state.
+ * Initialize the default game state.
  * Distribute initial cards.
  */
-function initialise() {
+function initialize() {
     % Create all card combinations and indices
     var idx = 0;
     for (var s = 0; s < SYMBOLS.length; s++) {
@@ -125,61 +126,55 @@ function initialise() {
         }
     }
 
-    % Initlialise the array with a cardindex
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
-        var zArr = new Array();
-        for (var column = 0; column < FIELD_WIDTH; column++) {
+    % Initialize the array with a card index
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        var row = new Array();
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             % Get random element from the cardList and remove the card afterwards
             var rnd = getRandomInt(unusedCards.length);
-            zArr.push(unusedCards[rnd]);
+            row.push(unusedCards[rnd]);
             unusedCards.splice(rnd, 1);
         }
-        complField.push(zArr);
+        complBoard.push(row);
     }
 
-    % Initialise player points
+    % Initialize player points
     for (var p = 0; p < MAX_PLAYERS; p++) {
         points.push(0);
     }
 
-    % Init the GUI
-    initialiseButtons();
+    % Initialize the GUI
+    initializeButtons();
 
     drawAll();
 }
 
 /**
- * Initialise all buttons from the GUI.
+ * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct colors.
  */
-function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
+function initializeButtons() {
+    % Disables the rectangle around a button after the click
+    app.focusRect = false;
+
+    % Assign each button the corresponding function and disable the highlights
     this.getField("refill").setAction("MouseUp", "refill();");
-    this.getField("refill").highlight="none";
-
     this.getField("hint").setAction("MouseUp", "hint();");
-    this.getField("hint").highlight="none";
-
     this.getField("restart").setAction("MouseUp", "restart();");
-    this.getField("restart").highlight="none";
 
-    % Each field needs to be connected to an input function
-    var funcName = "markField";
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
-            this.getField("pos" + x + "-" + y).highlight="none";
-            this.getField("pos" + x + "-" + y).borderColor = color.transparent;
+    % Each card needs to be connected to an input function
+    var funcName = "markCard";
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            var callbackName = funcName + "(" + m.toString() + "," + n.toString() + ");";
+            this.getField("card" + m + "-" + n).setAction("MouseDown", callbackName);
 
-            for (var z = 0; z < SYMB_COUNT; z++) {
-                var f = this.getField("field" + z + x + y);
-                f.setAction("MouseUp", callbackName);
+            for (var i = 0; i < SYMB_COUNT; i++) {
+                var cell = this.getField("cell" + i + "-" + m + "-" + n);
+                cell.setAction("MouseUp", callbackName);
 
-                f.textSize = SCREEN_TEXT_HEIGHT / (FIELD_HEIGHT * 5);
-                f.alignment = "center";
-                f.fillColor = color.transparent;
-                f.borderColor = color.transparent;
+                cell.textSize = SCREEN_TEXT_HEIGHT / (BOARD_HEIGHT * 5);
+                cell.alignment = "center";
             }
         }
     }
@@ -191,23 +186,16 @@ function initialiseButtons() {
         % Set buttonpress callback
         this.getField("player" + p).setAction("MouseDown", callbackName);
         % Set point-fields to zero
-        var f = this.getField("points" + p);
-        f.delay = true;
-        f.setAction("MouseDown", callbackName);
-        f.value = points[p - 1];
-        f.fillColor = color.transparent;
-        f.borderColor = color.transparent;
-        f.delay = false;
+        var field = this.getField("points" + p);
+        field.delay = true;
+        field.setAction("MouseDown", callbackName);
+        field.value = points[p - 1];
+        field.delay = false;
     }
-
-    % Info field setup
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
 
     % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
-    this.getField("tooltipbtn").highlight="none";
 
     printInfoText("Please select the player who found a set!");
 }
@@ -222,37 +210,37 @@ function restart() {
         unusedCards.push(idx++);
     }
 
-    % Reset field
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
+    % Reset board
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             % Get random element from the cardList and remove the card afterwards
             var rnd = getRandomInt(unusedCards.length);
-            complField[y][x] = unusedCards[rnd];
+            complBoard[m][n] = unusedCards[rnd];
             unusedCards.splice(rnd, 1);
-            draw(x, y);
+            draw(m, n);
         }
     }
 
     % Set point-fields back to zero
     for (var p = 1; p <= MAX_PLAYERS; p++) {
         points[p - 1] = 0;
-        var f = this.getField("points" + p);
-        f.delay = true;
-        f.value = 0;
-        f.delay = false;
+        var field = this.getField("points" + p);
+        field.delay = true;
+        field.value = 0;
+        field.delay = false;
     }
 
     % Reset game state
     lastSelections = [];
     gameover = false;
 
-    playerIdx = -1;
+    playerIdx = EMPTY;
 
     printInfoText("Please select the player who found a set!");
 }
 
 /**
- * Enable or disable the tooltip
+ * Enable or disable the tooltip.
  *
  * @param {Boolean} on Enable or disable tooltip
  */
@@ -262,12 +250,12 @@ function tooltip(on) {
         % and adjust the size so the text can be displayed
         var field = this.getField("tooltiptxt");
         field.delay = true;
+        field.hidden = false;
         field.value = GAME_DESC;
 
         field.multiline = true;
         field.textSize = 16;
-        field.fillColor = color.gray;
-        % hight 842, width 596
+        % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
         field.rect = [128, 581, 468, 381];
 
@@ -276,28 +264,23 @@ function tooltip(on) {
         % Hide the textelements that lie behind the tooltip
         % so the text is not shown
         for (var z = 0; z < SYMB_COUNT; z++) {
-            field = this.getField("field" + z + 1 + 1);
+            field = this.getField("cell" + z + "-1-1");
             field.hidden = true;
-            field = this.getField("field" + z + 2 + 1);
+            field = this.getField("cell" + z + "-1-2");
             field.hidden = true;
         }
     } else {
         % Remove the field such that it is not visible
         var field = this.getField("tooltiptxt");
         field.delay = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
+        field.hidden = true;
         field.delay = false;
 
         % Unhide the textelements
         for (var z = 0; z < SYMB_COUNT; z++) {
-            field = this.getField("field" + z + 1 + 1);
+            field = this.getField("cell" + z + "-1-1");
             field.hidden = false;
-            field = this.getField("field" + z + 2 + 1);
+            field = this.getField("cell" + z + "-1-2");
             field.hidden = false;
         }
     }
@@ -314,7 +297,7 @@ function selectPlayer(idx) {
     if (gameover) {
         return;
     }
-    if (playerIdx != -1) {
+    if (playerIdx != EMPTY) {
         printInfoText("Can not switch player after selection. (Player " + playerIdx + ")");
         return;
     }
@@ -328,14 +311,14 @@ function selectPlayer(idx) {
  * Adjusts the points accordingly, end the game when no sets are left
  * and removes found sets.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function markField(x, y) {
+function markCard(m, n) {
     if (gameover) {
         return;
     }
-    if (playerIdx == -1) {
+    if (playerIdx == EMPTY) {
         printInfoText("Please select the player who found a set!");
         return;
     }
@@ -343,21 +326,26 @@ function markField(x, y) {
     % Remove blinking cursor after selection
     this.getField("tooltiptxt").setFocus();
 
+    if (complBoard[m][n] == EMPTY) {
+        printInfoText("Player " + playerIdx + ": You need to select a card!");
+        return;
+    }
+
     % If there are not jet 3 cards selected
     var len = lastSelections.length;
     if (len < 3) {
-        % Ignore fields that are already selected
-        if (len == 1 && (x == lastSelections[len - 1][0] && y == lastSelections[len - 1][1])) {
+        % Ignore cards that are already selected
+        if (len == 1 && (m == lastSelections[len - 1][M] && n == lastSelections[len - 1][N])) {
             return;
         }
         if (len == 2 && (
-            (x == lastSelections[len - 1][0] && y == lastSelections[len - 1][1]) ||
-            (x == lastSelections[len - 2][0] && y == lastSelections[len - 2][1]))
+            (m == lastSelections[len - 1][M] && n == lastSelections[len - 1][N]) ||
+            (m == lastSelections[len - 2][M] && n == lastSelections[len - 2][N]))
         ) {
             return;
         }
 
-        lastSelections.push([x, y]);
+        lastSelections.push([m, n]);
         printInfoText("Selected " + lastSelections.length + ".");
     }
 
@@ -370,10 +358,10 @@ function markField(x, y) {
         this.getField("points" + playerIdx).value++;
         this.getField("points" + playerIdx).delay = false;
 
-        % Clear the fields
+        % Clear the selection
         for (var i = 0; i < lastSelections.length; i++) {
-            clear(lastSelections[i][0], lastSelections[i][1]);
-            complField[lastSelections[i][1]][lastSelections[i][0]] = -1;
+            clear(lastSelections[i][M], lastSelections[i][N]);
+            complBoard[lastSelections[i][M]][lastSelections[i][N]] = EMPTY;
         }
 
         if (gameOverCheck()) {
@@ -390,7 +378,7 @@ function markField(x, y) {
     }
 
     % Reset player
-    playerIdx = -1;
+    playerIdx = EMPTY;
 
     % Reset selection
     lastSelections = [];
@@ -405,25 +393,25 @@ function hint() {
     if (gameover) {
         return;
     }
-    % Dont give a hint after a player selection
-    if (playerIdx != -1) {
+    % Do not give a hint after a player selection
+    if (playerIdx != EMPTY) {
         printInfoText("Hint unavailable while player selected. (Player " + playerIdx + ")");
         return;
     }
 
-    % Actuall search for a set in the given cards
+    % Actual search for a set in the given cards
     var posArray = [[], [], []];
-    var cardCount = FIELD_WIDTH * FIELD_HEIGHT;
+    var cardCount = BOARD_WIDTH * BOARD_HEIGHT;
     for (var e1 = 0; e1 < cardCount - 2; e1++) {
         for (var e2 = e1 + 1; e2 < cardCount - 1; e2++) {
             for (var e3 = e2 + 1; e3 < cardCount; e3++) {
                 % Reassign
-                posArray[0] = [e1 \% FIELD_WIDTH, Math.floor(e1 / FIELD_WIDTH)];
-                posArray[1] = [e2 \% FIELD_WIDTH, Math.floor(e2 / FIELD_WIDTH)];
-                posArray[2] = [e3 \% FIELD_WIDTH, Math.floor(e3 / FIELD_WIDTH)];
+                posArray[0] = [Math.floor(e1 / BOARD_WIDTH), e1 \% BOARD_WIDTH];
+                posArray[1] = [Math.floor(e2 / BOARD_WIDTH), e2 \% BOARD_WIDTH];
+                posArray[2] = [Math.floor(e3 / BOARD_WIDTH), e3 \% BOARD_WIDTH];
 
                 if (isSet(posArray)) {
-                    printInfoText("Try card " + posArray[0] + " ([x, y]).");
+                    printInfoText("Try card " + posArray[0] + " ([m, n]).");
                     return;
                 }
             }
@@ -440,12 +428,12 @@ function hint() {
  * @return {Boolean} true if is a set false else.
  */
 function isSet(positions) {
-    var idx1 = complField[positions[0][1]][positions[0][0]];
-    var idx2 = complField[positions[1][1]][positions[1][0]];
-    var idx3 = complField[positions[2][1]][positions[2][0]];
+    var idx1 = complBoard[positions[0][M]][positions[0][N]];
+    var idx2 = complBoard[positions[1][M]][positions[1][N]];
+    var idx3 = complBoard[positions[2][M]][positions[2][N]];
 
     % If a card slot is empty there can not be a set
-    if (idx1 == -1 || idx2 == -1 || idx3 == -1) {
+    if (idx1 == EMPTY || idx2 == EMPTY || idx3 == EMPTY) {
         return false;
     }
 
@@ -488,27 +476,27 @@ function isSet(positions) {
 }
 
 /**
- * Refill all slots that are -1 if there are any.
+ * Refill all slots that are EMPTY if there are any.
  * If not refill all slots.
  */
 function refill() {
     if (gameover) {
         return;
     }
-    if (playerIdx != -1) {
+    if (playerIdx != EMPTY) {
         printInfoText("Can not refill while player selected. (Player " + playerIdx + ")");
         return;
     }
 
     % Fill all empty slots and count all occurrences
     var slotCount = 0;
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (complField[y][x] == -1) {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            if (complBoard[m][n] == EMPTY) {
                 var rnd = getRandomInt(unusedCards.length);
-                complField[y][x] = unusedCards[rnd];
+                complBoard[m][n] = unusedCards[rnd];
                 unusedCards.splice(rnd, 1);
-                draw(x, y);
+                draw(m, n);
 
                 slotCount++;
             }
@@ -516,28 +504,28 @@ function refill() {
     }
     printInfoText("Refilled " + slotCount + " slots.");
 
-    % If there are no empty slots refill the complete field.
+    % If there are no empty slots refill the complete board.
     if (slotCount == 0) {
         % Remove the current cards and mark them as unused
-        for (var x = 0; x < FIELD_WIDTH; x++) {
-            for (var y = 0; y < FIELD_HEIGHT; y++) {
-                unusedCards.push(complField[y][x]);
+        for (var m = 0; m < BOARD_HEIGHT; m++) {
+            for (var n = 0; n < BOARD_WIDTH; n++) {
+                unusedCards.push(complBoard[m][n]);
             }
         }
 
         % Select new cards
-        for (var x = 0; x < FIELD_WIDTH; x++) {
-            for (var y = 0; y < FIELD_HEIGHT; y++) {
+        for (var m = 0; m < BOARD_HEIGHT; m++) {
+            for (var n = 0; n < BOARD_WIDTH; n++) {
                 if (unusedCards.length == 0) {
                     continue;
                 }
                 var rnd = getRandomInt(unusedCards.length);
-                complField[y][x] = unusedCards[rnd];
+                complBoard[m][n] = unusedCards[rnd];
                 unusedCards.splice(rnd, 1);
-                draw(x, y);
+                draw(m, n);
             }
         }
-        printInfoText("Refilled the complete field.");
+        printInfoText("Refilled the complete board.");
     }
 }
 
@@ -545,15 +533,13 @@ function refill() {
  * Check if the remaining cards do not allow for another set.
  * If there are more then 20 cards left, these will contain a set.
  * Otherwise all cards need to be checked.
- *
- * TODO this function was not tested that intensly
  */
 function gameOverCheck() {
-    % Count remaining cards on the field
+    % Count remaining cards on the board
     var count = 0;
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (complField[y][x] > -1) {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            if (complBoard[m][n] > EMPTY) {
                 count++;
             }
         }
@@ -564,33 +550,33 @@ function gameOverCheck() {
         return false;
     }
 
-    % Add as much rows as needed to have space for all missing elems
-    var rows = Math.ceil(unusedCards.length / FIELD_WIDTH);
+    % Add as much rows as needed to have space for all missing elements
+    var rows = Math.ceil(unusedCards.length / BOARD_WIDTH);
     for (var row = 0; row < rows; row++) {
         var zArr = new Array();
         % Get all unused cards and push them to the array
-        for (var column = 0; column < FIELD_WIDTH; column++) {
-            var idx = column + row * FIELD_WIDTH;
-            % Push the index if there is one left. -1 otherwise
+        for (var column = 0; column < BOARD_WIDTH; column++) {
+            var idx = column + row * BOARD_WIDTH;
+            % Push the index if there is one left. EMPTY otherwise
             if (idx < unusedCards.length) {
                 zArr.push(unusedCards[idx]);
             } else {
-                zArr.push(-1);
+                zArr.push(EMPTY);
             }
         }
-        complField.push(zArr);
+        complBoard.push(zArr);
     }
 
     % Iterate all combinations
     var posArray = [[], [], []];
-    var cardCount = FIELD_WIDTH * (FIELD_HEIGHT + rows);
+    var cardCount = BOARD_WIDTH * (BOARD_HEIGHT + rows);
     for (var e1 = 0; e1 < cardCount - 2; e1++) {
         for (var e2 = e1 + 1; e2 < cardCount - 1; e2++) {
             for (var e3 = e2 + 1; e3 < cardCount; e3++) {
                 % Reassign
-                posArray[0] = [e1 \% FIELD_WIDTH, Math.floor(e1 / FIELD_WIDTH)];
-                posArray[1] = [e2 \% FIELD_WIDTH, Math.floor(e2 / FIELD_WIDTH)];
-                posArray[2] = [e3 \% FIELD_WIDTH, Math.floor(e3 / FIELD_WIDTH)];
+                posArray[0] = [Math.floor(e1 / BOARD_WIDTH), e1 \% BOARD_WIDTH];
+                posArray[1] = [Math.floor(e2 / BOARD_WIDTH), e2 \% BOARD_WIDTH];
+                posArray[2] = [Math.floor(e3 / BOARD_WIDTH), e3 \% BOARD_WIDTH];
 
                 if (isSet(posArray)) {
                     return false;
@@ -600,8 +586,8 @@ function gameOverCheck() {
     }
 
     % Remove the added rows again
-    for (var row = FIELD_HEIGHT; row < FIELD_HEIGHT + rows; row++) {
-        complField.splice(row, 1);
+    for (var row = BOARD_HEIGHT; row < BOARD_HEIGHT + rows; row++) {
+        complBoard.splice(row, 1);
     }
 
     return true;
@@ -611,25 +597,25 @@ function gameOverCheck() {
 % Draw and coloring %
 %%%%%%%%%%%%%%%%%%%%%
 /**
- * Draw all fields.
+ * Draw all cards.
  */
 function drawAll() {
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            draw(x, y);
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
+            draw(m, n);
         }
     }
 }
 
 /**
- * Since only one field is updated with each input,
- * only this field needs to be redrawn.
+ * Since only one card is updated with each input,
+ * only this card needs to be redrawn.
  *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
+ * @param {Number} m The m position.
+ * @param {Number} n The n position.
  */
-function draw(x, y) {
-    var idx = complField[y][x];
+function draw(m, n) {
+    var idx = complBoard[m][n];
 
     % Generate the text value that is to be assigned
     var spans = new Array();
@@ -660,36 +646,36 @@ function draw(x, y) {
     ];
     var positions = posList[cardList[idx][NUM_P] - 1];
 
-    % Assign the text value to the right fields
-    for (var f = 0; f < SYMB_COUNT; f++) {
-        var field = this.getField("field" + f + x + y);
-        field.delay = true;
-        field.richText = true;
+    % Assign the text value to the right cells
+    for (var i = 0; i < SYMB_COUNT; i++) {
+        var cell = this.getField("cell" + i + "-" + m + "-" + n);
+        cell.delay = true;
+        cell.richText = true;
 
-        if (positions[f] == 1) {
-            field.richValue = spans;
+        if (positions[i] == 1) {
+            cell.richValue = spans;
         } else {
-            % Clear field from previous element
-            field.value = "";
+            % Clear cell from previous element
+            cell.value = "";
         }
-        field.delay = false;
+        cell.delay = false;
     }
 }
 
 /**
- * Clear the field at the given position.
+ * Clear the cell at the given position.
  *
- * @param {Number} x The x coordinate.
- * @param {Number} y The y coordinate.
+ * @param {Number} m The m coordinate.
+ * @param {Number} n The n coordinate.
  */
-function clear(x, y) {
-    var idx = complField[y][x];
+function clear(m, n) {
+    var idx = complBoard[m][n];
 
-    for (var f = 0; f < SYMB_COUNT; f++) {
-        var field = this.getField("field" + f + x + y);
-        field.delay = true;
-        field.value = "";
-        field.delay = false;
+    for (var i = 0; i < SYMB_COUNT; i++) {
+        var cell = this.getField("cell" + i + "-" + m + "-" + n);
+        cell.delay = true;
+        cell.value = "";
+        cell.delay = false;
     }
 }
 
@@ -705,10 +691,10 @@ function printInfoText(text) {
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
@@ -721,8 +707,8 @@ function printInfoText(text) {
         \columnbreak{}
             % Tooltip object
             \begin{flushright}%
-                \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                \TextField[name=tooltiptxt, bordercolor=, backgroundcolor=gray, readonly, hidden]{}
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -730,41 +716,39 @@ function printInfoText(text) {
             \end{flushright}%
         \end{multicols}
 
-        % Calculate the max height of a block
-        \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt) / (\fieldHeight * 5) \relax}
+        % Calculate the max height of a text cell
+        % 2pt for each TextField, 5pt for distance between cards, 2 * 5pt for margin inside a card
+        \FPeval{\resultH}{\boardHeight * 4 * 2 + \boardHeight * 5 + \boardHeight * 5 * 2}
+        \def\cellHeight{\dimexpr (0.591\paperheight -\resultH pt) / (\boardHeight * 5) \relax}
 
         \begin{center}
-            % Add all card fields
-            \begin{tabularx}{\textwidth}{@{} *{\fieldWidth}{X} @{}}%
-                \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
-                    \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
-                        \PushButton[name=pos#1-#2, bordercolor=white]{%
+            \tiny
+            \renewcommand{\arraystretch}{0.0}
+            % Add all cards
+            \begin{tabularx}{\textwidth}{@{} *{\boardWidth}{X} @{}}%
+                \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
+                    \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
+                        \PushButton[name=card#1-#2, bordercolor=, backgroundcolor=,borderwidth=0]{%
                             \begin{tcolorbox}%
                                 \centering%
                                 % Sadly xintFor* does not work inside a PushButton
                                 % so the elements need to be copy pasted
-                                \TextField[%
-                                    height=\blocksizeH,%
-                                    bordercolor=white, name=field0#1#2, readonly=true]{}\\[0.5mm]%
-                                \TextField[%
-                                    height=\blocksizeH,%
-                                    bordercolor=white, name=field1#1#2, readonly=true]{}\\[0.5mm]%
-                                \TextField[%
-                                    height=\blocksizeH,%
-                                    bordercolor=white, name=field2#1#2,  readonly=true]{}\\[0.5mm]%
-                                \TextField[%
-                                    height=\blocksizeH,%
-                                    bordercolor=white, name=field3#1#2,  readonly=true]{}\\[0.5mm]%
-                                \TextField[%
-                                    height=\blocksizeH,%
-                                    bordercolor=white, name=field4#1#2,  readonly=true]{}\\%
+                                \TextField[name=cell0-#1-#2, height=\cellHeight,%
+                                    bordercolor=, backgroundcolor=, readonly]{}\\[2pt]%
+                                \TextField[name=cell1-#1-#2, height=\cellHeight,%
+                                    bordercolor=, backgroundcolor=, readonly]{}\\[2pt]%
+                                \TextField[name=cell2-#1-#2, height=\cellHeight,%
+                                    bordercolor=, backgroundcolor=, readonly]{}\\[2pt]%
+                                \TextField[name=cell3-#1-#2, height=\cellHeight,%
+                                    bordercolor=, backgroundcolor=, readonly]{}\\[2pt]%
+                                \TextField[name=cell4-#1-#2, height=\cellHeight,%
+                                    bordercolor=, backgroundcolor=, readonly]{}\\%
                             \end{tcolorbox}%
                         }%
                         % Have the cell divider for all elements
                         % that are not the last one
                         \xintifForLast{}{&}%
-                    }\\%
+                    }\\[5pt]%
                 }%
             \end{tabularx}
         \end{center}
@@ -773,11 +757,22 @@ function printInfoText(text) {
             % Player selection buttons
             \begin{tabularx}{\textwidth}{@{} *{\playerCount}{X} @{}}%
                 \xintFor* #1 in {\xintSeq{1}{\playerCount}} \do {%
-                    \PushButton[name=player#1, bordercolor=white]{
-                        \begin{tcolorbox}
-                            \centering
-                            \TextField[name=points#1, height=0.35cm, width=0.5cm, readonly=true]
-                                {Player #1:}
+                    \PushButton[name=player#1, bordercolor=, backgroundcolor=, borderwidth=1]{
+                        \begin{tcolorbox}[left=0pt, right=0pt, halign=center]
+                            \ifdim\linewidth>30pt
+                                P%
+                            \fi%
+                            \ifdim\linewidth>50pt
+                                layer%
+                            \fi%
+                            \ifdim\linewidth>35pt
+                                \(\;\)%
+                            \fi%
+                            \ifdim\linewidth>20pt
+                            #1:%
+                            \fi%
+                            \TextField[name=points#1, width=0.4cm, height=0.35cm,
+                                bordercolor=, backgroundcolor=, align=1, readonly]{}
                         \end{tcolorbox}
                     }
                     % Have the cell divider for all elements
@@ -790,26 +785,27 @@ function printInfoText(text) {
         \begin{center}
             % Game related buttons
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=refill, bordercolor=white]{
+                \PushButton[name=refill, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Refill card slots.\strut{}
                     \end{tcolorbox}
                 } &
-                \PushButton[name=hint, bordercolor=white]{
+                \PushButton[name=hint, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Hint\strut{}
                     \end{tcolorbox}
                 }\\%
-                \PushButton[name=restart, bordercolor=white]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart game\strut{}
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, width=\linewidth, readonly=true]{}
+                    \TextField[name=info, width=\linewidth,
+                        bordercolor=, backgroundcolor=, readonly]{}
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
